--- a/1주차/마크다운 작성법.md
+++ b/1주차/마크다운 작성법.md
@@ -185,10 +185,10 @@ _single underscores_
 __double underscores__
 ~~cancelline~~
 ```
-*single asterisks*
-_single underscores_
-**double asterisks**
-__double underscores__
+*single asterisks*<br>
+_single underscores_<br>
+**double asterisks**<br>
+__double underscores__<br>
 ~~cancelline~~
 > 문장 중간에 사용할 경우 **띄어쓰기**를 사용하는 것이 좋다.
 
@@ -197,16 +197,27 @@ __double underscores__
 ![Alt text](/path/to/img.jpg)
 ![Alt text](/path/to/img.jpg "Optional title")
 ```
+
 ![test image](https://images.velog.io/images/minide/post/b2763cf5-3351-4ee7-ad1d-d33fcfa43d69/%EB%B0%B0%EA%B2%BD%ED%99%94%EB%A9%B4.jpeg)
-
 ![test image](https://images.velog.io/images/minide/post/b2763cf5-3351-4ee7-ad1d-d33fcfa43d69/%EB%B0%B0%EA%B2%BD%ED%99%94%EB%A9%B4.jpeg "test image")
-사이즈를 조절 하려면 ```<img width="" height=""></img>```를 이용한다.
-```
-<img src="https://images.velog.io/images/minide/post/b2763cf5-3351-4ee7-ad1d-d33fcfa43d69/%EB%B0%B0%EA%B2%BD%ED%99%94%EB%A9%B4.jpeg" width="450px" height="300px" title="픽셀 크기 설정" alt="test image"></img><br/>
-<img src="https://images.velog.io/images/minide/post/b2763cf5-3351-4ee7-ad1d-d33fcfa43d69/%EB%B0%B0%EA%B2%BD%ED%99%94%EB%A9%B4.jpeg" width="40%" height="30%" title="픽셀 크기 설정" alt="test image"></img><br/>
-```
-<img src="https://images.velog.io/images/minide/post/b2763cf5-3351-4ee7-ad1d-d33fcfa43d69/%EB%B0%B0%EA%B2%BD%ED%99%94%EB%A9%B4.jpeg" width="450px" height="300px" title="픽셀 크기 설정" alt="test image"></img><br/>
-<img src="https://images.velog.io/images/minide/post/b2763cf5-3351-4ee7-ad1d-d33fcfa43d69/%EB%B0%B0%EA%B2%BD%ED%99%94%EB%A9%B4.jpeg" width="40%" height="30%" title="픽셀 크기 설정" alt="test image"></img><br/>
 
+- 이미지에 링크 삽입
+```
+[![Alt text](/path/to/img.jpg)](URL)
+```
+> 이미지 URL : https://github.com/jeongyuneo/2021-Java-Study/blob/jeongyun/image/testimg.jpeg
+
+[![test image](https://images.velog.io/images/minide/post/b2763cf5-3351-4ee7-ad1d-d33fcfa43d69/%EB%B0%B0%EA%B2%BD%ED%99%94%EB%A9%B4.jpeg)](https://github.com/jeongyuneo/2021-Java-Study/blob/jeongyun/image/testimg.jpeg)
+
+- 이미지 사이즈 조절
+```
+<img src="이미지경로" width="" height=""></img>
+```
+<img src="https://images.velog.io/images/minide/post/b2763cf5-3351-4ee7-ad1d-d33fcfa43d69/%EB%B0%B0%EA%B2%BD%ED%99%94%EB%A9%B4.jpeg" width="450px" height="300px" title="픽셀 크기 설정" alt="test image"></img><br/>
+<img src="https://images.velog.io/images/minide/post/b2763cf5-3351-4ee7-ad1d-d33fcfa43d69/%EB%B0%B0%EA%B2%BD%ED%99%94%EB%A9%B4.jpeg" width="40%" height="30%" title="픽셀 크기 설정" alt="test image"></img><br/>
+```
+<img src="https://images.velog.io/images/minide/post/b2763cf5-3351-4ee7-ad1d-d33fcfa43d69/%EB%B0%B0%EA%B2%BD%ED%99%94%EB%A9%B4.jpeg" width="450px" height="300px" title="픽셀 크기 설정" alt="test image"></img><br/>
+<img src="https://images.velog.io/images/minide/post/b2763cf5-3351-4ee7-ad1d-d33fcfa43d69/%EB%B0%B0%EA%B2%BD%ED%99%94%EB%A9%B4.jpeg" width="40%" height="30%" title="픽셀 크기 설정" alt="test image"></img><br/>
+```
 <br><br>
 참고 : [마크다운 markdown 작성법](https://gist.github.com/ihoneymon/652be052a0727ad59601)
