docs: Live template 내용 추가

--- a/2주차과제/2주차과제_코드실습.md
+++ b/2주차과제/2주차과제_코드실습.md
@@ -51,8 +51,15 @@
 
 ### 자주 사용하는 Live template
 ```
-- main + tab/Enter: Public static void main(String[] args)
-- psvm + tab/Enter: Public static void main(String[] args)
-- sout + tab/Enter: System.out.println()
-- serr + tab/Enter: System.err.println()
+- main + tab: Public static void main(String[] args)
+- psvm + tab: Public static void main(String[] args)
+- sout + tab: System.out.println();
+- soutf + tab: System.out.printf("");
+- serr + tab: System.err.println();
+- soutm + tab: System.out.println("curren class and method names");
+- soutv + tab: System.out.println(values);
+- soutp + tab: System.out.println(method paramater names and values);
+- St + tab: String
+- fori + tab: for (int i=0;i<;i++) {}
+- iter + tab: for (String arg : args) {}
 ```
