--- a/2주차과제/2주차과제_코드실습.md
+++ b/2주차과제/2주차과제_코드실습.md
@@ -14,6 +14,9 @@
 - Ctrl+Alt+Shift+S: 프로젝트 구조 확인 및 변경 창 열기
 - Ctrl+E: 최근 사용한 파일 목록 조회
 - Ctrl+Shift+A: 액션을 검색하여 실행
+- Ctrl+Shift+Enter: 세미콜론 생성
+- Ctrl+Alt+V: 반환값 보여줌(자료형,변수)
+
 ```
 
 ### Editing:편집기 관련 주요 단축키
@@ -42,6 +45,7 @@
 ```
 - Shift+F6: 이름 변경
 - Ctrl+Alt+Shift+T: 리팩토리 관련 전체 항목을 조회
+- Ctrl+Alt+L: 코드 자동 정렬
 ```
 
 ***
