docs: 코드실습 클래스 조회 내용 추가

--- a/2주차과제/2주차과제_코드실습.md
+++ b/2주차과제/2주차과제_코드실습.md
@@ -16,6 +16,8 @@
 - Ctrl+Shift+A: 액션을 검색하여 실행
 - Ctrl+Shift+Enter: 세미콜론 생성
 - Ctrl+Alt+V: 반환값 보여줌(자료형,변수)
+- Ctrl+N: 클래스 이름으로 클래스 이동
+- Ctrl+Shift+N: 파일 이름으로 파일 이동
 
 ```
 
