docs: 자바 코드 컨벤션 오타 수정

--- a/3주차/자바 코드 컨벤션.md
+++ b/3주차/자바 코드 컨벤션.md
@@ -338,8 +338,8 @@ for (Customer customer : visitedCustomers) {
 }
 ```
 
-### 7-10. 이상/삼항 연산자의 앞 뒤에 공백 삽입
-이상/삼항 연산자의 앞 뒤에는 공백을 삽입한다.
+### 7-10. 이항/삼항 연산자의 앞 뒤에 공백 삽입
+이항/삼항 연산자의 앞 뒤에는 공백을 삽입한다.
 - 좋은 예
 ```java
 f (pattern == Access.ABNORMAL) {
