--- a/3주차/자바 기초.md
+++ b/3주차/자바 기초.md
@@ -5,7 +5,7 @@
 - 기본값이 있기 때문에 **Null**이 존재하지 않는다.
   (만약 기본형 타입에 Null을 넣고 싶다면 **<span style="color:blue">래퍼 클래스</span>**를 활용한다.
 - **실제 값**을 저장하는 공간으로 **<span style="color:blue">스택(Stack)</span>** 메모리에 저장된다.
-- 만약 컴파일 시점에 담을 수 있는 크기를 벗어남녀 에러를 발생시키는 컴파일 에러가 발생한다. 주로 문법상의 에러가 많다.
+- 만약 컴파일 시점에 담을 수 있는 크기를 벗어나 에러를 발생시키는 컴파일 에러가 발생한다. 주로 문법상의 에러가 많다.
   ex) 세미콜론(;)을 안붙였다는 이유로 빨간 줄이 쳐지는 경우
 
 <table>
@@ -148,7 +148,10 @@ class Variables {
 ## 4. 변수의 스코프와 라이프타임
 ### 4-1. 스코프(Scope)
 스코프는 변수가 유효한 범위를 의미한다.
+
+### 4-2. 라이프타임(LifeTime)
 라이프타임은 변수가 메모리에서 살아있는 기간을 의미한다.
+<br>
 
 |변수 타입|스코프|라이프타임|
 |:---:|---|---|
