--- a/3주차과제/자바기초.md
+++ b/3주차과제/자바기초.md
@@ -221,6 +221,8 @@ int[][]arr = {{1,2,3},{10,20,30}};
 
 ## 7. 타입 추론, var
 | 코드 작성 당시 타입이 정해지지 않았지만, 컴파일러가 그 타입을 유추하는 것  
+
+### 7.1 Var
 - Java 10 이상에서 추가됨  
 - 지역변수이며 선언과 동시에 초기화가 필수적  
 
@@ -232,6 +234,51 @@ String str = "Hello";
 var str = "Hello I am SooYeon";
 -> 컴파일러가 오른쪽에 초기화 값으로 제공되는 것을 통해 타입 유추
 ```
+
+### 7.2 Generics
+- 주로 자바 컬렉션에서 사용
+- 컬렉션에는 어떤 자료를 담을 지 알 수 없으므로 최상위 객체인 Object형태로 저장되고 관리되도록 설계  
+- 프로그래머가 원하는 객체 타입을 명시해 의도하지 않은 객체는 저장될 수 없도록 컴파일시에 오류 확인 가능  
+
+#### 7.2.1 Generic 클래스 정의
+| 클래스 명 뒤에 <제너릭타입,...> 덧붙임
+```
+public class Test<T> {
+
+    private T t;
+
+    public void add(T t) {
+
+        this.t = t;
+
+    }
+
+}
+```
+#### 7.2.2 Generic 클래스 선언과 생성
+| 클래스명 뒤에 <제너릭타입> 덧붙임
+```
+Test<Integer> integerTest;
+
+integerTest = new Test<Integer>();
+```
+
+### 7.2.3 Generic 타입에 사용되는 파라미터
+| 타입 매개변수는 하나의 대문자 사용
+```
+E - Element
+
+K - Key
+
+N - Number
+
+T - Type
+
+V - Value
+
+S,U,V etc. - 2nd, 3rd, 4th types
+```
+
 
 
 
