--- a/3주차과제/자바코드실습.md
+++ b/3주차과제/자바코드실습.md
@@ -166,7 +166,7 @@ interface RasterDelegate;
 ```
 
 ### 8.4 Methods
-- 메소드 이름은 동사여야 하고, 복합 단어일 경우 첫 단어는 소문자로 시작, 후에 나오는 단어의 첫문자는 대문자로 사용<br>
+- 메소드 이름은 동사로 시작하고, 복합 단어일 경우 첫 단어는 소문자로 시작, 후에 나오는 단어의 첫문자는 대문자로 사용<br>
 ```
 runFast();
 getBackground();
