--- a/3주차과제/자바코드실습.md
+++ b/3주차과제/자바코드실습.md
@@ -188,8 +188,10 @@ float myWidth;
 ### 9.1 인스턴스 변수, 클래스 변수 외부 노출말고 접근 제공
 - 이유없이 public 선언 말기<br>
 
-### 9.2 클래스 변수와 클래스 메소드는 클래스 이름을 사용해 호출
+### 9.2 클래스 변수(static 변수)와 클래스 메소드(static 메소드)는 클래스 이름을 사용해 호출 
 - 클래스 변수나 클래스 메소드를 호출하기 위해 객체 사용하는 것은 피하기<br>
+- static으로 선언한 것은 이미 메모리에 올라가 있고, 객체를 사용(인스턴스화)하면 또다시 메모리에 올라가게 됨  
+
 ```
 classMethod();  //좋은 사용
 AClass.classMethod();   //좋은 사용
