docs: 클래스 변수 내용 수정

--- a/3주차과제/자바코드실습.md
+++ b/3주차과제/자바코드실습.md
@@ -185,7 +185,7 @@ float myWidth;
 
 ## 9. 좋은 프로그래밍 습관
 
-### 9.1 인스턴스 변수, 클래스 변수 외부 노출말고 접근 제공
+### 9.1 인스턴스 변수는 외부 노출말고 접근 제공
 - 이유없이 public 선언 말기<br>
 
 ### 9.2 클래스 변수(static 변수)와 클래스 메소드(static 메소드)는 클래스 이름을 사용해 호출 
