--- a/4주차과제/자바기초.md
+++ b/4주차과제/자바기초.md
@@ -134,7 +134,85 @@ int b = 50; //b에 50 대입
 ```  
 
 ## 7. 화살표(->)연산자
+| 익명함수라고 불리는 람다가 등장하며 사용되는 연산자  
+
+### 7.1 람다 함수란?
+| 익명 함수(Anonymous functions)를 지칭하는 용어
+
+#### 7.1.1 익명 함수란?  
+| 함수의 이름이 없는 함수
+
+### 7.2 람다 식이란?
+| 식별자 없이 실행가능한 함수
+- 함수지만 함수를 따로 만들지 않고 코드 한줄에 함수를 써서 그를 호출하는 방식
+
+### 7.3 람다식 사용법
+- (매개변수목록) -> {함수 몸체} 
+- () -> {함수몸체}
+- (매개변수) -> 함수몸체
+- (매개변수) -> {return 0;}
+```
+(int x) -> x+1
+(x) -> x+1
+x -> x+1
+(int x) -> { return x+1; }
+x -> { return x+1; }
+```
+
+### 7.4 람다식 예제
+#### 7.4.1 기존 자바 문법  
+```
+new Thread(new Runnable() {
+   @Override
+   public void run() { 
+      System.out.println("Hello"); 
+   }
+}).start();
+```
+#### 7.4.2 람다식 문법  
+```
+new Thread(()->{
+      System.out.println("Hello");
+}).start();
+```
 
 ## 8. 3항 연산자
-## 9. 연산자 우선 순위
+| if/else 구조로 간단하게 쓸 수 있는 조건연산자  
+
+### 8.1 3항 연산자의 형식
+```
+(조건식) ? 피연산자1(true일경우):피연산자2(false일경우)  
+```
+boolean 조건이 참일 경우 피연산자1    
+
+boolean 조건이 거짓일 경우 피연산자2  
+
+### 8.2 3항 연산자의 예제  
+3항 연산자를 사용할 경우
+```
+int a1 = (5>4) ? 50 : 40; // 조건식이 true이므로 a1은 50
+```
+
+if-else문을 사용할 경우  
+```
+int a2 = 0;
+if(5>4){
+    a2 = 50;
+}
+else{
+    a2 = 40;
+}
+```
+
+## 9. 연산자 우선 순위  
+|우선순위|연산자 종류|연산자 예|
+|:---:|:-----:|:-----:|
+|1|괄호|() []|
+|2|전위연산자|++a, --b|
+|3|산술연산자|+,=,*,/,%|
+|4|시프트연산자|<<,>> 등|
+|5|비교연산자|<,<=,>,>=,==,!=|
+|6|대입연산자|=,+=,-=,*=,/= 등|
+|7|후위연산자|a++, b--|
+
 ## 10. Java 13, switch 연산자
