feat: Java13, switch 연산자

--- a/4주차과제/자바기초.md
+++ b/4주차과제/자바기초.md
@@ -215,4 +215,60 @@ else{
 |6|대입연산자|=,+=,-=,*=,/= 등|
 |7|후위연산자|a++, b--|
 
-## 10. Java 13, switch 연산자
+## 10. Java 13, switch 연산자  
+- 자바 12부터 switch 연산자가 추가
+  
+[Java 12]  
+- ->(화살표) 표현이 가능하고 data만 존재할 경우 return이 가능하다.  
+
+- -> 구문을 사용할 경우 break;를 적지 않아도 다음 case 구문으로 넘어가지 않는다.  
+   
+- -> 표현 오른쪽은 꼭 단일 수행일 필요는 없다. 블록 {} 안에서의 작업도 가능하다. 
+
+[Java 13]
+- yield 예약어가 추가됨
+- yield x 를 하면 x가 리턴
+- yield는 예약어이지만 변수명으로 사용가능
+
+
+<Java 12이전의 switch case 문법>
+```
+ int num = 1;
+        int returnNum = 0;
+        switch(num){
+            case 1:
+                returnNum = 1;
+                System.out.println("1");
+                break;
+            case 2:
+                returnNum = 2;
+                System.out.println("2");
+                break;
+            case 3:
+                returnNum = 3;
+                System.out.println("3");
+                break;
+        }
+```
+이전 자바 switch case의 문제점  
+
+1. 불필요하게 장황  
+2. Error 발생시 디버깅이 어려움  
+
+<Java 12의 switch case 문법>
+```
+  returnNum = switch(num){
+            case 1 -> 1;
+            case 2 -> 2;
+            default -> throw new IllegalStateException("Unexpected value: " + num);
+        };
+```
+
+<Java 13의 switch case 문법>
+```
+  returnNum = switch(num){
+            case 1 : yield 3;
+            default : throw new IllegalStateException("unexpected value : " + num);
+        };
+```
+
