feat:자바 코드 실습 VO 내용 정리

--- a/4주차과제/자바코드실습.md
+++ b/4주차과제/자바코드실습.md
@@ -2,4 +2,39 @@
 
 ## 역할,책임,협력(객체지향의 사실과 오해) -> 제일 중요한 것은 메시지다
 
-## vo(불변객체)
+## VO(value object)
+| 값 객체를 뜻하며 데이터를 담는 객체를 의미  
+- read Only 속성을 가짐
+- 읽기 전용이기 때문에 getter만 존재  
+
+
+다음과 같이 VO를 사용할 수 있음  
+```
+public class AccountVo {
+	private String id;
+	private String pw;
+	
+	
+	public String getId() {
+		return this.id;
+	}
+	
+	public String getPw() {
+		return this.pw;
+	}
+	
+}
+```
+### VO 장점
+- 데이터 전달을 위해 가장 효율적인 방법  
+- 가독성과 유지보수 측면에서 좋음  
+- Network traffic이 줄어들 수 있음  
+
+
+
+### VO 단점
+- 클래스 선언을 위해 많은 코드가 필요  
+- 파일 수가 많아지면 관리가 힘듦  
+
+
+
