docs: Add arithmetic operator, shift operator

--- a/4weeks/2.java basics.md
+++ b/4weeks/2.java basics.md
@@ -1,1 +1,65 @@
 # 자바 기초
+
+## 산술(Arithmetic) 연산자
+수학적인 계산에 사용되는 연산자다. 
+|:---|---:|
+| + | 더하기 |
+| - | 빼기 |
+| * | 곱하기 |
+| / | 나누기 |
+| % | 나머지 |
+
+## 비트(Shift) 연산자
+비트 연산자는 데이터를 비트 단위로 연산한다. 따라서 0과 1로 표현 가능한 **정수**타입이나 정수형으로 **캐스팅이 가능한**자료형만 비트 연산이 가능하다. 비트 연산자는 기능에 따라 아래와 같이 나뉜다.
+- 비트 이동 연산자
+- 비트 논리 연산자
+
+### 비트 이동 연산자
+| 연산식 | 설명 |
+|:---|---:|
+| x << y | 정수 x의 각 비트를 y만큼 왼쪽으로 이동시킨다. 빈 자리는 0으로 채워진다. |
+| x >> y | 정수 x의 각 비트를 y만큼 오른쪽으로 이동시킨다. 빈 자리는 정수 a(x?)의 최상위 부호비트와 같은 값으로 채워진다. |
+| x >>> y | 정수 x의 각 비트를 y만큼 오른쪽으로 이동시킨다. 빈 자리는 0으로 채워진다. |
+
+#### 2 << 3
+![2<<3](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbCkFTP%2FbtqDliWFHTr%2FKD08H1foVnhVhvZcUvKcq1%2Fimg.png)
+
+#### 16 >> 3
+![16>>3](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FcqOvM1%2FbtqDj2AcdBR%2FJm2hw2X8V3QPH6kpdhOsx0%2Fimg.png)
+
+#### -16 >> 3
+![-16 >> 3](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FekMbBV%2FbtqDk6IXvz7%2F8tEH93tlmA0oUQFmZjg3I0%2Fimg.png)
+
+#### -16 >>> 3
+![-16 >>> 3](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FPZrk3%2FbtqDlO19CFf%2FCBLZG7ta3NscZS79mFqeG0%2Fimg.png)
+
+
+### 비트 논리 연산자
+| 연산자 | 논리 | 설명 |
+|:---|:---|---:|
+| & | AND | 두 비트 모두 1일 경우에만 연산 결과가 1 |
+| or | OR | 두 비트 중 하나만 1일 경우에만 연산결과가 1 |
+| ^ | XOR | 두 비트 중 하나는 1이고 다른 하나가 0일 경우에만 연산결과가 1 |
+| ~ | NOT | 비트 반전(보수) |
+
+
+
+
+
+# 자바 기초
+
+### 학습할 것
+- 산술 연산자
+- 비트 연산자
+- 관계 연산자
+- 논리 연산자
+- instanceof
+- aggignment operator(=)
+- 화살표 연산자(->)
+- 3항 연산자
+- 연산자 우선 순위
+- (optional) Java 13. swithch operator
+
+
+# Reference
+[Shift operator](https://coding-factory.tistory.com/521)
