docs: Add relational operator

--- a/4weeks/2.java basics.md
+++ b/4weeks/2.java basics.md
@@ -44,6 +44,18 @@
 | ~ | NOT | 비트 반전(보수) |
 
 
+## 관계(relational) 연산자
+
+비교 연산자라고도 한다. 관계 연산자의 결과는 boolean 자료형인 true, false로 반환된다.(제어문에서 많이 활용)
+
+| 연산자 | 기능 |
+|:---:|:---:|
+| > | 좌항이 크면 참, 아니면 거짓을 반환 |
+| < | 좌항이 작으면 참, 아니면 거짓을 반환 |
+| >= | 좌항이 우항보다 크거나 같으면 참, 아니면 거짓을 반환 |
+| <= | 좌항이 우항보다 작거나 같으면 참, 아니면 거짓을 반환 |
+| == | 두 항의 값이 같으면 참, 아니면 거짓을 반환 |
+| != | 두 항이 다르면 참, 아니면 거짓을 반환 |
 
 
 
