docs: Add logical operator

--- a/4weeks/2.java basics.md
+++ b/4weeks/2.java basics.md
@@ -58,6 +58,18 @@
 | != | 두 항이 다르면 참, 아니면 거짓을 반환 |
 
 
+## 논리(logical) 연산자
+
+연산의 결과가 true, false로 반환된다.
+| 연산자 | 기능 |
+|:---:|:---:|
+| &&(논리 곱) | 두 항이 모두 참인 경우에만 결과 값이 참이다. 그렇지 않은 경우는 거짓이다. |
+| oror(논리 합) | 두 항 중 하나의 항만 참이면 결과 값이 참이다. 두 항이 모두 거짓이면 거짓이다. |
+| !(부정) | 단항 연산자이다. 참인 경우는 거짓으로 바꾸고, 거짓인 경우는 참으로 바꾼다. |
+
+
+
+
 
 
 
