docs: Add condition operator

--- a/4weeks/2.java basics.md
+++ b/4weeks/2.java basics.md
@@ -68,7 +68,28 @@
 | !(부정) | 단항 연산자이다. 참인 경우는 거짓으로 바꾸고, 거짓인 경우는 참으로 바꾼다. |
 
 
+## 3항 연산자
+다양한 삼항 연산자가 있지만 조건 연산자(?:)는 상당히 흔한 반면 다른 삼항 연산자는 잘 쓰지 않아서, 흔히 조건 연산자를 삼항 연산자라고 부른다.
 
+> 조건 연산자(condition operator), 인라인 조건문(inline if), 삼항 조건문(ternary if)라고 불린다.
+
+
+- 문(statement), 식(expression)의 구분
+> 식은 값을 만들어 내며 다른 식의 하위 요소로 계산에 참여할 수 있는 반면 문은 자신을 둘러싸고 있는 가장 안쪽 블록의 최상위 요소로 존재하며 아무런 값을 만들어내지 않는다는 차이가 있다.
+
+```java
+condition ? A : B
+// condition의 결과가 true일 때 A 반환.
+```
+
+### if/else 와의 차이점
+
+- if/else - 문(statement). if자체로는 값을 만들어내지 못한다.
+- 조건 연산자 - 식(expression). 값을 만들어낸다.
+
+```java
+String message = String.format("%d와 %d중 더 큰 수는 %d입니다.", a, b, (a > b) ? a : b);
+```
 
 
 
