docs: Add arrow operator, lambda expr

--- a/4weeks/2.java basics.md
+++ b/4weeks/2.java basics.md
@@ -91,6 +91,55 @@ condition ? A : B
 String message = String.format("%d와 %d중 더 큰 수는 %d입니다.", a, b, (a > b) ? a : b);
 ```
 
+## 화살표 연산자(arrow operator)
+(C언어)
+
+보통 구조체에 접근할 때 포인터를 통해 접근한다. 
+
+```C
+struct s_type {
+    int i;
+    char str[80];
+} s, *p;
+```
+
+위와 같이 정의된 경우, 다음 문장은 s의 주소를 p에 치환한다.
+> p = &s;
+
+p가 s를 가리키고 있으므로, p를 통하여 s에 접근할 수 있다. 그러나 p를 이용하여 s의 각 원소를 접근하기 위해, 도트 연산자 dot operator를 사용할 수 없다. 
+
+아래와 같이 화살표 연산자 arrow operator를 사용해야 한다.
+
+> p -> i = 1;
+
+이 문장은 p를 통해 s의 원소 i에 값 1을 치환한다. 
+
+- 구조체 변수를 이용해 구조체 원소에 접근할 때, 도트 연산자
+- 포인터를 이용해 구조체 원소에 접근할 때, 화살표 연산자
+
+
+## 람다 표현식(lambda expression)
+메소드를 하나의 식으로 표현한 것이다.
+```java
+// 메소드
+int min(int x, int y) {
+    return (x < y) ? x : y;
+}
+
+
+// 람다 표현식
+(x, y) -> (x < y) ? x : y;
+
+// 익명 클래스
+new Object() {
+    int min(int x, int y) {
+        return (x < y) ? x : y;
+    }
+}
+```
+
+위처럼 메소드를 람다 표현식으로 쓰면 클래스를 작성하고 객체를 생성하지 않아도 메소드를 사용할 수 있다. 
+
 
 
 
@@ -111,4 +160,5 @@ String message = String.format("%d와 %d중 더 큰 수는 %d입니다.", a, b, 
 
 
 # Reference
-[Shift operator](https://coding-factory.tistory.com/521)
+- [Shift operator](https://coding-factory.tistory.com/521)
+- [lambda expr](http://www.tcpschool.com/java/java_lambda_concept)
