docs: Modify lambda expr

--- a/4weeks/2.java basics.md
+++ b/4weeks/2.java basics.md
@@ -130,6 +130,7 @@ int min(int x, int y) {
 // 람다 표현식
 (x, y) -> (x < y) ? x : y;
 
+
 // 익명 클래스
 new Object() {
     int min(int x, int y) {
@@ -139,6 +140,42 @@ new Object() {
 ```
 
 위처럼 메소드를 람다 표현식으로 쓰면 클래스를 작성하고 객체를 생성하지 않아도 메소드를 사용할 수 있다. 
+
+자바에서는 클래스의 선언과 동시에 객체를 생성한다. 단 하나의 객체만을 생성할 수 있는 클래스를 익명 클래스라 한다. 따라서 자바에서 람다 표현식은 익명 클래스와 같다.
+
+이런 람다 표현식은 메소드의 매개변수로 전달될 수도 있고 메소드의 결과값으로 반환될 수도 있다.
+
+
+### 람다 표현식 유의사항
+1. 매개변수의 타입을 추론할 수 있는 경우에는 타입을 생략할 수 있습니다.
+2. 매개변수가 하나인 경우에는 괄호(())를 생략할 수 있습니다.
+3. 함수의 몸체가 하나의 명령문만으로 이루어진 경우에는 중괄호({})를 생략할 수 있습니다. (이때 세미콜론(;)은 붙이지 않음)
+4. 함수의 몸체가 하나의 return 문으로만 이루어진 경우에는 중괄호({})를 생략할 수 없습니다.
+5. return 문 대신 표현식을 사용할 수 있으며, 이때 반환값은 표현식의 결괏값이 됩니다. (이때 세미콜론(;)은 붙이지 않음)
+
+```java
+new Thread(new Runnable() {
+
+    public void run() {
+
+        System.out.println("전통적인 방식의 일회용 스레드 생성");
+
+    }
+
+}).start();
+
+ 
+
+new Thread(()->{
+
+    System.out.println("람다 표현식을 사용한 일회용 스레드 생성");
+
+}).start();
+```
+
+
+
+
 
 
 
