--- a/4weeks/2.java basics.md
+++ b/4weeks/2.java basics.md
@@ -174,6 +174,40 @@ new Thread(()->{
 ```
 
 
+## 대입(assignment) 연산자
+
+대입 연산자는 변수에 값을 대입할 때 사용하는 이항 연산자이며, 피연산자들의 결합 방향은 오른쪽에서 왼쪽이다. 아래는 대입 연산자와 복합 대입 연산자이다.
+
+| 대입 연산자 | 설명 |
+|:---:|:---:|
+| = | 왼쪽의 피연산자에 오른쪽의 피연산자를 대입함 |
+| += | 왼쪽의 피연산자에 오른쪽의 피연산자를 더한 후, 그 결괏값을 왼쪽의 피연산자에 대입함 |
+| -=  | 왼쪽의 피연산자에서 오른쪽의 피연산자를 뺀 후, 그 결괏값을 왼쪽의 피연산자에 대입함 |
+| *= | 왼쪽의 피연산자에 오른쪽의 피연산자를 곱한 후, 그 결괏값을 왼쪽의 피연산자에 대입함 |
+| /= | 왼쪽의 피연산자를 오른쪽의 피연산자로 나눈 후, 그 결괏값을 왼쪽의 피연산자에 대입함 |
+|%=  |왼쪽의 피연산자를 오른쪽의 피연산자로 나눈 후, 그 나머지를 왼쪽의 피연산자에 대입함 |
+| &= | 왼쪽의 피연산자를 오른쪽의 피연산자와 비트 AND 연산한 후, 그 결괏값을 왼쪽의 피연산자에 대입함 |
+| |= | 왼쪽의 피연산자를 오른쪽의 피연산자와 비트 OR 연산한 후, 그 결괏값을 왼쪽의 피연산자에 대입함 |
+| ^= | 왼쪽의 피연산자를 오른쪽의 피연산자와 비트 XOR 연산한 후, 그 결괏값을 왼쪽의 피연산자에 대입함 |
+| <<= | 왼쪽의 피연산자를 오른쪽의 피연산자만큼 왼쪽 시프트한 후, 그 결괏값을 왼쪽의 피연산자에 대입함 |
+| >>= | 왼쪽의 피연산자를 오른쪽의 피연산자만큼 부호를 유지하며 오른쪽 시프트한 후, 그 결괏값을 왼쪽의 피연산자에 대입함 |
+| >>>= | 왼쪽의 피연산자를 오른쪽의 피연산자만큼 부호에 상관없이 오른쪽 시프트한 후, 그 결괏값을 왼쪽의 피연산자에 대입함 |
+
+```java
+int num1 = 7, num2 = 7, num3 = 7;
+ 
+num1 = num1 - 3;
+num2 -= 3;
+num3 =- 3;// 순서 참고
+ 
+System.out.println("- 연산자에 의한 결과 : "+ num1);
+// 4
+System.out.println("-= 연산자에 의한 결과 : "+ num2);
+// 4
+System.out.println("=- 연산자에 의한 결과 : "+ num3);
+// -3
+```
+
 
 
 
