docs: Modify assignment operator table

--- a/4weeks/2.java basics.md
+++ b/4weeks/2.java basics.md
@@ -180,18 +180,18 @@ new Thread(()->{
 
 | 대입 연산자 | 설명 |
 |:---:|:---:|
-| = | 왼쪽의 피연산자에 오른쪽의 피연산자를 대입함 |
-| += | 왼쪽의 피연산자에 오른쪽의 피연산자를 더한 후, 그 결괏값을 왼쪽의 피연산자에 대입함 |
-| -=  | 왼쪽의 피연산자에서 오른쪽의 피연산자를 뺀 후, 그 결괏값을 왼쪽의 피연산자에 대입함 |
-| *= | 왼쪽의 피연산자에 오른쪽의 피연산자를 곱한 후, 그 결괏값을 왼쪽의 피연산자에 대입함 |
-| /= | 왼쪽의 피연산자를 오른쪽의 피연산자로 나눈 후, 그 결괏값을 왼쪽의 피연산자에 대입함 |
-|%=  |왼쪽의 피연산자를 오른쪽의 피연산자로 나눈 후, 그 나머지를 왼쪽의 피연산자에 대입함 |
-| &= | 왼쪽의 피연산자를 오른쪽의 피연산자와 비트 AND 연산한 후, 그 결괏값을 왼쪽의 피연산자에 대입함 |
-| |= | 왼쪽의 피연산자를 오른쪽의 피연산자와 비트 OR 연산한 후, 그 결괏값을 왼쪽의 피연산자에 대입함 |
-| ^= | 왼쪽의 피연산자를 오른쪽의 피연산자와 비트 XOR 연산한 후, 그 결괏값을 왼쪽의 피연산자에 대입함 |
-| <<= | 왼쪽의 피연산자를 오른쪽의 피연산자만큼 왼쪽 시프트한 후, 그 결괏값을 왼쪽의 피연산자에 대입함 |
-| >>= | 왼쪽의 피연산자를 오른쪽의 피연산자만큼 부호를 유지하며 오른쪽 시프트한 후, 그 결괏값을 왼쪽의 피연산자에 대입함 |
-| >>>= | 왼쪽의 피연산자를 오른쪽의 피연산자만큼 부호에 상관없이 오른쪽 시프트한 후, 그 결괏값을 왼쪽의 피연산자에 대입함 |
+| = | 좌항에 우항을 대입함 |
+| += | 좌항에 우항을 더한 후, 그 결괏값을 좌항에 대입함 |
+| -=  | 좌항에서 우항을 뺀 후, 그 결괏값을 좌항에 대입함 |
+| *= | 좌항에 우항을 곱한 후, 그 결괏값을 좌항에 대입함 |
+| /= | 좌항을 우항으로 나눈 후, 그 결괏값을 좌항에 대입함 |
+|%=  |좌항을 우항으로 나눈 후, 그 나머지를 좌항에 대입함 |
+| &= | 좌항을 우항와 비트 AND 연산한 후, 그 결괏값을 좌항에 대입함 |
+| |= | 좌항을 우항와 비트 OR 연산한 후, 그 결괏값을 좌항에 대입함 |
+| ^= | 좌항을 우항와 비트 XOR 연산한 후, 그 결괏값을 좌항에 대입함 |
+| <<= | 좌항을 우항만큼 왼쪽 시프트한 후, 그 결괏값을 좌항에 대입함 |
+| >>= | 좌항을 우항만큼 부호를 유지하며 오른쪽 시프트한 후, 그 결괏값을 좌항에 대입함 |
+| >>>= | 좌항을 우항만큼 부호에 상관없이 오른쪽 시프트한 후, 그 결괏값을 좌항에 대입함 |
 
 ```java
 int num1 = 7, num2 = 7, num3 = 7;
