docs: Fix 'or'symbol in assignment operator table

--- a/4weeks/2.java basics.md
+++ b/4weeks/2.java basics.md
@@ -187,7 +187,7 @@ new Thread(()->{
 | /= | 좌항을 우항으로 나눈 후, 그 결괏값을 좌항에 대입함 |
 |%=  |좌항을 우항으로 나눈 후, 그 나머지를 좌항에 대입함 |
 | &= | 좌항을 우항와 비트 AND 연산한 후, 그 결괏값을 좌항에 대입함 |
-| |= | 좌항을 우항와 비트 OR 연산한 후, 그 결괏값을 좌항에 대입함 |
+| or= | 좌항을 우항와 비트 OR 연산한 후, 그 결괏값을 좌항에 대입함 |
 | ^= | 좌항을 우항와 비트 XOR 연산한 후, 그 결괏값을 좌항에 대입함 |
 | <<= | 좌항을 우항만큼 왼쪽 시프트한 후, 그 결괏값을 좌항에 대입함 |
 | >>= | 좌항을 우항만큼 부호를 유지하며 오른쪽 시프트한 후, 그 결괏값을 좌항에 대입함 |
