--- a/4weeks/2.java basics.md
+++ b/4weeks/2.java basics.md
@@ -209,6 +209,18 @@ System.out.println("=- 연산자에 의한 결과 : "+ num3);
 ```
 
 
+## 연산자 우선 순위
+
+### 우선 순위
+- 괄호 > 산술 > 비교 > 논리 > 대입
+- 단항 > 이항 > 삼항
+
+### 연산 진행방향
+- 왼쪽에서 오른쪽: 단항 연산자, 대입 연산자
+- 오른쪽에서 왼쪽: 위 두 개를 제외한 연산자
+
+### 기본 연산자 우선 순위
+![operator order](https://t1.daumcdn.net/cfile/tistory/997A014D5A90B9B00D)
 
 
 
@@ -218,16 +230,16 @@ System.out.println("=- 연산자에 의한 결과 : "+ num3);
 # 자바 기초
 
 ### 학습할 것
-- 산술 연산자
-- 비트 연산자
-- 관계 연산자
-- 논리 연산자
-- instanceof
-- aggignment operator(=)
-- 화살표 연산자(->)
-- 3항 연산자
-- 연산자 우선 순위
-- (optional) Java 13. swithch operator
+- [x] 산술 연산자
+- [x] 비트 연산자
+- [x] 관계 연산자
+- [x] 논리 연산자
+- [ ] instanceof
+- [x] assignment operator(=)
+- [x] 화살표 연산자(->)
+- [x] 3항 연산자
+- [x] 연산자 우선 순위
+- [ ] (optional) Java 13. swithch operator
 
 
 # Reference
