--- a/4주차 과제/자바 기초.md
+++ b/4주차 과제/자바 기초.md
@@ -74,18 +74,21 @@ public class Operator {
 |~|비트를 1이면 0으로, 0이면 1로 반전시킴. (비트 NOT 연산, 1의 보수)|
 |<<|피연산자의 부호에 상관없이 자리를 왼쪽으로 이동시키면서 빈칸을 0으로 채움.|
 |>>|오른쪽으로 이동시키기 때문에 음수인 경우 부호를 유지시켜주기 위해 빈자리를 1로 채움.|
-|>>>|지정된 수만큼 비트를 전부 오른쪽으로 이동시키며, 부호에 상관없이 항상 0으로 빈자리를 채움..|
-
+|>>>|지정된 수만큼 비트를 전부 오른쪽으로 이동시키며, 부호에 상관없이 항상 0으로 빈자리를 채움.|
 - 비트 AND 연산
+
 ![](http://www.tcpschool.com/lectures/img_php_bitwise_and.png)
 
 - 비트 OR 연산
+
 ![](http://www.tcpschool.com/lectures/img_php_bitwise_or.png)
 
 - 비트 XOR 연산
+
 ![](http://www.tcpschool.com/lectures/img_php_bitwise_xor.png)
 
 - 비트 NOT 연산
+
 ![](http://www.tcpschool.com/lectures/img_php_bitwise_not.png)
 
 - 시프트 연산
@@ -106,15 +109,16 @@ int num1 = 8, num2 = -8;
 ```
 
 ## 관계 연산자
-- true 혹은 false 값인 boolean 자료형으로 반환이 된다.
+- true 혹은 false 값인 boolean 자료형으로 반환이 된다.  
+  
 |연산자|기능|연산 예|
 |:---:|:---:|:---:|
-|>|왼쪽 항이 크면 참을, 아니면 거짓을 반환함.|num > 3;|
-|<|왼쪽 항이 작으면 참, 아니면 거짓을 반환함.|num < 3;|
-|>=|왼쪽 항이 오른쪽 항보다 크거나 같으면 참, 아니면 거짓을 반환함.|num >= 3;|
-|<=|왼쪽 항이 오른쪽 항보다 작거나 같으면 참, 아니면 거짓을 반환함.|num <= 3;|
+|\>|왼쪽 항이 크면 참을, 아니면 거짓을 반환함.|num \> 3;|
+|\<|왼쪽 항이 작으면 참, 아니면 거짓을 반환함.|num \< 3;|
+|\>=|왼쪽 항이 오른쪽 항보다 크거나 같으면 참, 아니면 거짓을 반환함.|num \>= 3;|
+|\<=|왼쪽 항이 오른쪽 항보다 작거나 같으면 참, 아니면 거짓을 반환함.|num \<= 3;|
 |==|두 개 항의 값이 같으면 참, 아니면 거짓을 반환함.|num == 3;|
-|!=|두 개 항이 다르면 참, 아니면 거짓을 반환함.|num != 3;|
+|\!=|두 개 항이 다르면 참, 아니면 거짓을 반환함.|num \!= 3;|
 
 ## 논리 연산자
 ## instanceof
