--- a/4주차 과제/자바 기초.md
+++ b/4주차 과제/자바 기초.md
@@ -121,6 +121,14 @@ int num1 = 8, num2 = -8;
 |\!=|두 개 항이 다르면 참, 아니면 거짓을 반환함.|num \!= 3;|
 
 ## 논리 연산자
+- AND(&&), OR(||), NOT(\!) 세 가지의 연산자가 있으며 관계 연산자와 같이 사용되는 경우가 많다.
+- 논리 연산자 역시 연산의 결과가 true 혹은 false로 반환된다.
+|연산자|기능|연산 예|
+|:---:|:---:|:---:|
+|&&(논리 곱)|두 항이 모두 참인 경우에만 결과 값이 참, 아니면 거짓.|booleanval = (5 \> 3) && (5 \> 2);|
+|\|\|(논리 합)|두 항 중 하나의 항만 참이면 결과 값이 참, 두 항이 모두 거짓이면 결과 값은 거짓.|booleanval = (5 \> 3) \|\| (5 \< 2);|
+|\!(부정)|단항 연산자. 참인 경우 거짓으로 바꾸고 거짓인 경우 참으로 바꿈,|booleanval = \!(5 \> 3);|
+
 ## instanceof
 ## assignment(=) operator
 ## 화살표(->) 연산자
