docs: Add instanceof operator

--- a/4weeks/2.java basics.md
+++ b/4weeks/2.java basics.md
@@ -223,6 +223,102 @@ System.out.println("=- 연산자에 의한 결과 : "+ num3);
 ![operator order](https://t1.daumcdn.net/cfile/tistory/997A014D5A90B9B00D)
 
 
+## instanceof
+레퍼런스 변수가 참조하고 있는 인스턴스의 실제 타입을 알아보기 위해 사용한다. 주로 주건문에 사용되며, instanceof의 왼쪽에는 레퍼런스 변수를 오른족에서 타입(클래스 명)이 피연산자로 위치한다. 
+
+instanceof를 이용한 연산결과로 true를 얻었다면 레퍼런스 변수가 검사한 타입으로 형변환이 가능하다는 것을 뜻한다.
+
+연산의 결과로 boolean값인 true, false중 하나를 반환한다. 값이 null인 참조변수에 대해 instanceof 연산을 수행하면 false를 반환한다.
+
+```java
+package arabiannight.tistory.com.java.test;
+
+public class Instanceof {
+    public static void main(String[] args) {
+        FireEngine f = new FireEngine();
+        Ambulance a = new Ambulance();
+
+        Instanceof test = new Instanceof();
+        test.doWork(f);
+        test.doWork(a);
+    }
+
+    public void doWork(Car c) {
+        if (c instanceof FireEngine) {
+            FireEngine f = (FireEngine) c;
+            f.water();
+        } else if (c instanceof Ambulance) {
+            Ambulance a = (Ambulance) c;
+            a.siren();
+        }
+    }
+}
+
+class Car {
+    String color;
+    int door;
+
+    void drive() {// 운전기능
+        System.out.println("drive, brrr");
+    }
+
+    void stop() {
+        System.out.println("stop!");
+    }
+}
+
+class FireEngine extends Car {
+    void water() {
+        System.out.println("water!");
+    }
+}
+
+class Ambulance extends Car {
+    void siren() {
+        System.out.println("siren~~");
+    }
+}
+
+```
+
+위의 코드는 Car타입의 참조변수 c를 매개변수로 하는 메소드이다. 이 메소드가 호출될 때, 매개변수로 Car클래스 또는 그 자손 클래스의 인스턴스를 넘겨받겠지만 메소드 내에서는 정확히 어떤 인스턴스인지 알 길이 없습니다. 그렇기 때문에 instanceof 연산자를 이용해서 참조변수 c가 가리키고 있는 인스턴스의 타입을 체크하고, 적절히 형변환한 다음에 작업한다.
+
+조상타입의 레퍼런스 변수로 자손타입의 인스턴스를 참조할 수 있기 때문에, 레퍼런스 변수의 타입과 인스턴스의 타입이 항상 일치하지는 않는 것이다. 조상타입의 레퍼런스 변수로는 실제 인스턴스 멤버들을 모두 사용할 수 없기 때문에, 실제 인스턴스와 같은 타입의 참조변수로 형변환을 해야만 인스턴스의 모든 멤버들을 사용할 수 있다.
+
+```java
+package arbiannight.tistory.com.java.test;
+
+import java.awt.*;
+
+class InstanceofTest {
+    public static void main(String[] args) {
+        FireEngine f = new FireEngine();
+
+        if (f instanceof FireEngine) {
+            System.out.println("This is a FireEngine istance.");
+        }
+        if (f instanceof Car) {
+            System.out.println("This is a Car instance.");
+        }
+        if (f instanceof Object) {
+            System.out.println("This is an Object instance.");
+        }
+    }
+}// class
+class Car{}
+class FireEngine extends Car{}
+```
+
+생성된 인스턴스는 FireEngine타입이지만 Object타입과 Car타입의 instanceof 연산에서도 true를 결과로 얻었습니다. 그 이유는 FireEngine클래스는 Object클래스와 Car클래스의 자손클래스이므로 조상의 멤버들을 상속받았기 때문에, FireEngine인스턴스는 Object인스턴스와 Car인스턴스를 포함하고 있는 셈이기 때문이다. 
+
+즉, 실제 인스턴스와 같은 타입의 instanceof연산 이외의 조상타입의 instanceof 연산에도 true를 결과로 얻으며, instanceof 연산의 결과가 true라는 것은 검사한 타입으로의 형변환을 해도 아무런 문제가 없다는 것이다. 
+
+### 정리
+- 인스턴스 멤버보다 참조변수가 사용할 수 있는 멤버수가 더 많으면 사용할 수 없다.
+- 인스턴스 멤버 수에 비해 참조변수가 사용할 수 있는 멤버수가 같거나 적은 경우 사용할 수 있다.
+
+그러므로 조상의 레퍼런스로는 모든 자손의 인스턴스를 참조할 수 있다.
+
 
 
 
@@ -234,7 +330,7 @@ System.out.println("=- 연산자에 의한 결과 : "+ num3);
 - [x] 비트 연산자
 - [x] 관계 연산자
 - [x] 논리 연산자
-- [ ] instanceof
+- [x] instanceof
 - [x] assignment operator(=)
 - [x] 화살표 연산자(->)
 - [x] 3항 연산자
@@ -245,3 +341,4 @@ System.out.println("=- 연산자에 의한 결과 : "+ num3);
 # Reference
 - [Shift operator](https://coding-factory.tistory.com/521)
 - [lambda expr](http://www.tcpschool.com/java/java_lambda_concept)
+- [instanceof operator](https://arabiannight.tistory.com/313)
