--- a/4주차 과제/자바 기초.md
+++ b/4주차 과제/자바 기초.md
@@ -131,6 +131,38 @@ int num1 = 8, num2 = -8;
 |\!(부정)|단항 연산자. 참인 경우 거짓으로 바꾸고 거짓인 경우 참으로 바꿈.|booleanval = \!(5 \> 3);|
 
 ## instanceof
+- 참조 변수가 참조하고 있는 인스턴스의 실제 타입을 알아보기 위해 instanceof 연산자를 사용한다.
+- 주로 조건문에 사용되며, instanceof의 왼쪽에는 참조변수를, 오른쪽에는 타입(클래스명)이 피연산자로 위치한다.
+- 연산의 결과로는 boolean값인 true, false 중의 하나를 반환한다.
+- instanceof를 이용한 연산결과로 true를 얻었다는 것은 참조변수가 검사한 타입으로 형변환이 가능하다는 것을 뜻한다.
+```java
+public class InstanceofExam {
+    public static void main(String[] args) {
+        A a = new A();
+        B b = new B();
+
+        //객체 a는 자기 자신의 객체이기 때문에 형변환 가능.
+        System.out.println(a instanceof A); //true 출력
+
+        // 객체 b는 A의 자식객체이기 때문에 A로 형변환 가능.
+        System.out.println(b instanceof A); //true 출력
+
+        // 객체 a는 B의 부모객체이기때문에 형변환 불가능.
+        System.out.println(a instanceof B); //false 출력
+
+        // 객체 b는 자기 자신의 객체이기때문에 형변환 가능.
+        System.out.println(b instanceof B); //true 출력
+        } // end of main
+    } // end of class
+
+class A{
+
+}
+class B extends A{ 
+
+}
+```
+
 ## assignment(=) operator
 ## 화살표(->) 연산자
 ## 3항 연산자
