docs: Add switch operator

--- a/4weeks/2.java basics.md
+++ b/4weeks/2.java basics.md
@@ -320,25 +320,93 @@ class FireEngine extends Car{}
 그러므로 조상의 레퍼런스로는 모든 자손의 인스턴스를 참조할 수 있다.
 
 
+## switch 연산자
+기존의 switch문이 변경된 것이 아니라 switch연산자가 추가된 것이다.
+
+
+### swtich statement, switch operator
+- switch statement
+> 다수의 case, break가 존재한다. <br>
+> break;를 빼먹을 경우 다음 분기로 넘어가게 된다. <br>
+> return 값이 존재할 수 없다.
+
+
+- switch operator
+> break를 사용하지 않아도 된다. <br>
+> yield 존재한다.<br>
+> return 값이 존재할 수 있다.<br>
+> case -> A같은 형식으로 표현가능하다.
+
+
+> switch의 반환값이 따로 필요하지 않거나 case가 switch 들어오는 모든 인자를 커버하는 경우 default 항목을 넣어주지 않아도 되나 그렇지 않은 경우는 default -> code를 작성해야 한다.
+
+
+### java12와 java13에 추가된 기능
+- java 12
+	- 화살표(->) 표현이 가능하고 data만 존재할 경우 return이 가능하다.
+	- 화살표 구문을 사용할 경우 break;를 적지 않아도 다음 case 구문으로 넘어가지 않는다.
+	- 화살표 표현 오른쪽은 꼭 단일 수행일 필요는 없다. 블록({}) 안에서의 작업도 가능하다.
+
+
+- java 13
+	- yield 예약어가 추가되었다. yield x 하게 되면 x가 리턴된다.
+	- yield는 예약어이지만 변수명으로 사용가능하다. (int yield = 0;)
 
 
 
-# 자바 기초
+```java
+public class Main {
+    public static void main(String[] args) {
 
-### 학습할 것
-- [x] 산술 연산자
-- [x] 비트 연산자
-- [x] 관계 연산자
-- [x] 논리 연산자
-- [x] instanceof
-- [x] assignment operator(=)
-- [x] 화살표 연산자(->)
-- [x] 3항 연산자
-- [x] 연산자 우선 순위
-- [ ] (optional) Java 13. swithch operator
+        //Java 12 이전
+        int num = 1;
+        int returnNum = 0;
+        switch(num){
+            case 1:
+                returnNum = 1;
+                System.out.println("1들어옴");
+                break;
+            case 2:
+                returnNum = 2;
+                System.out.println("2들어옴");
+                break;
+            case 3:
+                returnNum = 3;
+                System.out.println("3들어옴");
+                break;
+        }
+        System.out.println("returnNum : [ " + returnNum + " ]");
+
+        //Java 12
+        returnNum = switch(num){
+            case 1 -> 1;
+            case 2 -> 2;
+            default -> throw new IllegalStateException("Unexpected value: " + num);
+        };
+        System.out.println("returnNum : [ " + returnNum + " ]");
+
+
+        //Java13
+        returnNum = switch(num){
+            case 1 : yield 3;
+            default : throw new IllegalStateException("unexpected value : " + num);
+        };
+
+        System.out.println("returnNum : [ " + returnNum + " ]");
+
+    }
+}
+
+
+1들어옴
+returnNum : [ 1 ]
+returnNum : [ 1 ]
+returnNum : [ 3 ]
+```
 
 
 # Reference
 - [Shift operator](https://coding-factory.tistory.com/521)
 - [lambda expr](http://www.tcpschool.com/java/java_lambda_concept)
 - [instanceof operator](https://arabiannight.tistory.com/313)
+- [switch operator](https://castleone.tistory.com/6)
