--- a/4weeks/2.java basics.md
+++ b/4weeks/2.java basics.md
@@ -39,7 +39,7 @@
 | 연산자 | 논리 | 설명 |
 |:---:|:---:|:---:|
 | & | AND | 두 비트 모두 1일 경우에만 연산 결과가 1 |
-| or | OR | 두 비트 중 하나만 1일 경우에만 연산결과가 1 |
+| \| | OR | 두 비트 중 하나만 1일 경우에만 연산결과가 1 |
 | ^ | XOR | 두 비트 중 하나는 1이고 다른 하나가 0일 경우에만 연산결과가 1 |
 | ~ | NOT | 비트 반전(보수) |
 
@@ -64,7 +64,7 @@
 | 연산자 | 기능 |
 |:---:|:---:|
 | &&(논리 곱) | 두 항이 모두 참인 경우에만 결과 값이 참이다. 그렇지 않은 경우는 거짓이다. |
-| oror(논리 합) | 두 항 중 하나의 항만 참이면 결과 값이 참이다. 두 항이 모두 거짓이면 거짓이다. |
+| \|\|(논리 합) | 두 항 중 하나의 항만 참이면 결과 값이 참이다. 두 항이 모두 거짓이면 거짓이다. |
 | !(부정) | 단항 연산자이다. 참인 경우는 거짓으로 바꾸고, 거짓인 경우는 참으로 바꾼다. |
 
 
@@ -187,7 +187,7 @@ new Thread(()->{
 | /= | 좌항을 우항으로 나눈 후, 그 결괏값을 좌항에 대입함 |
 |%=  |좌항을 우항으로 나눈 후, 그 나머지를 좌항에 대입함 |
 | &= | 좌항을 우항와 비트 AND 연산한 후, 그 결괏값을 좌항에 대입함 |
-| or= | 좌항을 우항와 비트 OR 연산한 후, 그 결괏값을 좌항에 대입함 |
+| \|= | 좌항을 우항와 비트 OR 연산한 후, 그 결괏값을 좌항에 대입함 |
 | ^= | 좌항을 우항와 비트 XOR 연산한 후, 그 결괏값을 좌항에 대입함 |
 | <<= | 좌항을 우항만큼 왼쪽 시프트한 후, 그 결괏값을 좌항에 대입함 |
 | >>= | 좌항을 우항만큼 부호를 유지하며 오른쪽 시프트한 후, 그 결괏값을 좌항에 대입함 |
