add: assignment operator

--- a/4주차 과제/자바 기초.md
+++ b/4주차 과제/자바 기초.md
@@ -164,6 +164,24 @@ class B extends A{
 ```
 
 ## assignment(=) operator
+- 대입 연산자는 변수에 값을 대입할 때 사용하는 이항 연산자이며, 피연산자들의 결합 방향은 오른쪽에서 왼쪽이다.
+- 자바에서는 대입 연산자를 결합하여 만든 다양한 복합 연산자를 제공한다.
+
+|대입 연산자|설명|
+|:---:|:---:|
+|=|왼쪽의 피연산자에 오른쪽의 피연산자를 대입|
+|+=|왼쪽의 피연산자에 오른쪽의 피연산자를 더한 후, 그 결과 값을 왼쪽의 피연산자에 대입|
+|-=|왼쪽의 피연산자에 오른쪽의 피연산자를 뺀 후, 그 결과 값을 왼쪽의 피연산자에 대입|
+|*=|왼쪽의 피연산자에 오른쪽의 피연산자를 곱한 후, 그 결과 값을 왼쪽의 피연산자에 대입|
+|/=|왼쪽의 피연산자에 오른쪽의 피연산자를 나눈 후, 그 결과 값을 왼쪽의 피연산자에 대입|
+|%=|왼쪽의 피연산자에 오른쪽의 피연산자를 나눈 후, 그 나머지를 왼쪽의 피연산자에 대입|
+|&=|왼쪽의 피연산자를 오른쪽의 피연산자와 비트 AND 연산한 후, 그 결과 값을 왼쪽의 피연산자에 대입|
+|\|=|왼쪽의 피연산자를 오른쪽의 피연산자와 비트 OR 연산한 후, 그 결과 값을 왼쪽의 피연산자에 대입|
+|^=|왼쪽의 피연산자를 오른쪽의 피연산자와 비트 XOR 연산한 후, 그 결과 값을 왼쪽의 피연산자에 대입|
+|\<\<=|왼쪽의 피연산자를 오른쪽의 피연산자만큼 왼쪽 시프트한 후, 그 결과 값을 왼쪽의 피연산자에 대입|
+|\>\>=|왼쪽의 피연산자를 오른쪽의 피연산자만큼 부호를 유지하며 오른쪽 시프트한 후, 그 결과 값을 왼쪽의 피연산자에 대입|
+|\>\>\>=|왼쪽의 피연산자를 오른쪽의 피연산자만큼 부호에 상관없이 오른쪽 시프트한 후, 그 결과 값을 왼쪽의 피연산자에 대입|
+
 ## 화살표(->) 연산자
 ## 3항 연산자
 ## 연산자 우선 순위
