docs: Fix issue where blockquote isn't shown in switch operator part

--- a/4weeks/2.java basics.md
+++ b/4weeks/2.java basics.md
@@ -337,8 +337,8 @@ class FireEngine extends Car{}
 > return 값이 존재할 수 있다.<br>
 > case -> A같은 형식으로 표현가능하다.
 
-<br>
-> switch의 반환값이 따로 필요하지 않거나 case가 switch 들어오는 모든 인자를 커버하는 경우 default 항목을 넣어주지 않아도 되나 그렇지 않은 경우는 default -> code를 작성해야 한다.
+
+switch의 반환값이 따로 필요하지 않거나 case가 switch 들어오는 모든 인자를 커버하는 경우 default 항목을 넣어주지 않아도 되나 그렇지 않은 경우는 default -> code를 작성해야 한다.
 
 
 ### java12와 java13에 추가된 기능
