--- a/4주차 과제/자바 기초.md
+++ b/4주차 과제/자바 기초.md
@@ -190,19 +190,19 @@ class B extends A{
 함수를 따로 만들지 않고 코드 한 줄에 함수를 써서 그것을 호출하는 방식을 말한다.
 ### 람다식 사용법
 ```
-(매개변수) -\> {실행문}
+(매개변수) -> {실행문}
 ```
 - (매개변수)는 오른쪽 중괄호 {} 블록을 실행하기 위해 필요한 값을 제공하는 역할을 한다. 
 - 매개 변수의 이름은 개발자가 자유롭게 지정할 수 있으며 인자타입도 명시하지 않아도 된다.
 ```java
-(int a, int b) -\> {return a + b}
+(int a, int b) -> {return a + b}
 ```
-###람다식 장점
+### 람다식 장점
 - 코드를 간결하게 만들 수 있다.
 - 코드가 간결하고 식에 개발자의 의도가 명확히 드러나므로 가독성이 향상된다.
 - 함수를 만드는 과정없이 한 번에 처리 할 수 있어 코딩하는 시간이 줄어든다.
 
-###람다식 단점
+### 람다식 단점
 - 람다를 사용하면서 만드는 무명함수는 재사용이 불가능하다.
 - 디버깅이 다소 까다롭다.
 - 코드가 지저분해질 수 있다.
