--- a/4주차 과제/자바 기초.md
+++ b/4주차 과제/자바 기초.md
@@ -209,5 +209,21 @@ class B extends A{
 - 재귀로 만들 경우에는 다소 부적합한 면이 있다.
 
 ## 3항 연산자
+![](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=http%3A%2F%2Fcfile29.uf.tistory.com%2Fimage%2F99375E495C020AB5030B68)
+
 ## 연산자 우선 순위
+|연산자 종류|연산자|
+|:---:|:---:|
+|최우선 연산자|\.(점), \[\], ()|
+|단항 연산자|\!, ~, +, -, ++, --, (cast 자료형), instanceof|
+|산술 연산자|+, -, *, /, %|
+|Shift 연산자|\<\<, \>\>, \>\>\>|
+|관계 연산자|\<, \>, \<=, \>=, ==, !=|
+|비트 연산자|&, \|, ^|
+|논리 연산자|&&,\|\||
+|삼항 연산자|(조건) ? 참 : 거짓|
+|배정 대입 연산자|=, *=, /=, %=, +=, -=, \<\<=, \>\>=, \>\>\>=|
+|증감 후위 연산자|++, --|
+|순차 연산자|,(콤마)|
+
 ## (optional) Java 13. switch 연산자
