add: Java 13 switch 연산자

--- a/4주차 과제/자바 기초.md
+++ b/4주차 과제/자바 기초.md
@@ -227,3 +227,22 @@ class B extends A{
 |순차 연산자|,(콤마)|
 
 ## (optional) Java 13. switch 연산자
+- 기존 switch 구문에 expression을 추가하였다.
+- switch문의 ```case:``` 대신 ```case ->``` 가 사용 가능하다.
+- break문 대신 yield 구문을 사용한다.
+```java
+String result = switch(n) {
+	case 1 -> {
+		System.out.println("one");
+		yield 1;
+	}
+	case 2 -> {
+		System.out.println("two");
+		yield 2;
+	}
+	default -> {
+		System.out.println("many");
+		yield 100;
+	}
+}
+```
