--- a/4주차 과제/자바 코드 실습.md
+++ b/4주차 과제/자바 코드 실습.md
@@ -1,2 +1,44 @@
 # 자바 코드 실습
 ## 역할, 책임, 협력(객체지향의 사실과 오해)
+### 객체지향의 목표
+
+> 현실 세게에서 식별 가능한 개체 또는 사물은 모두 "상태"와 "행동"을 가진 객체로 볼 수 있고, 이를 소프트웨어 세계에 모방해놓은 것이 "객체지향"이다.
+
+객체지향에 대해 공부하면서 한 번쯤은 봤을 법한 문장이다. 이 말이 완전 틀렸다고 볼 수 없지만, 오류가 분명 존재한다. 현실 세계의 객체와 소프트퉤어 세계의 객체 사이에는 분명 차이점이 있다.
+
+예를 들어, "커피"라는 객체가 있다고 하자. 현실 세계의 커피는 스스로 양을 줄이거나 늘릴수도 없는 수동적인 존재이다. 반면 객체지향 세계에서 커피는 스스로 자신의 상태를 관리할 수 있는 자율적인 존재가 된다. 또 필요에 따라 추가적인 능력도 보유할 수 있다.
+
+이처럼 소프트웨어 객체는 일반적으로 현실 객체가 가지지 못한 더많은 특징과 능력을 보유한 객체이다. 객체지향 설계의 목적은 현실 세계를 모방하는 것이 아니라, __새로운 세계를 창조하는 것__ 이다. 이것을 이해하는 것이 객체지향 설계의 시작이다.
+
+>객체지향은 "클래스"가 아니라 "객체"를 지향하는 것이다.
+
+객체지향을 생각하면 가장 먼저 "클래스"가 떠오른다. 클래스는 객체를 여러 개 만들어내는 설계도(또는 틀)이다. 객체지향이라는 소설의 주인공은 "클래스"가 아니라 "객체"이다. "클래스"의 생산물이 "객체"가 아니라, "객체"를 분류하기 위해 등장한 것이 "클래스"이다. 객체지향 설계에서 중요한 것은 어떤 클래스가 필요한가가 아니라 어떤 객체들이 어떤 메시지를 주고받으며 협력하는가이다. 코드를 담은 클래스의 관점이 아닌 메시지를 주고받는 객체 의 관점으로 애플리케이션을 바라보아야 한다.
+
+### 협력
+- 협력은 객체지향 세계에서 기능을 구현할 수 있는 유일한 방법이다. 두 객체 사이에서 협력은 하나의 객체가 다른 객체에게 도움을 할 때 시작된다. __메세지 전송__은 객체 사이의 협력을 위해 사용할 수 있는 유일한 커뮤니케이션 수단이다.
+
+- 객체를 자율적으로 만든다는 가장 기본적인 방법은 내부 구현을 __캡슐화__ 하는 것이다.
+
+- 메세지를 전송해서 협력을 요청하고 메세지를 수신한 객체는 도움이 필요한 경우 또 요청해서 처리한다. 즉, 이런 객체들 사이의 협력을 구성해 요청과 응답을 통해 기능이 구현된다.
+
+### 책임
+협력에 참여하기 위해 객체가 수행하는 행동을 책임이라고 부른다. 책임이란 객체에 정의되는 응집도 있는 행위의 집합으로 객체가 유지해야 하는 정보와 수행할수 있는 행동에 대해 개략적으로 서술한 문장이다. 객체의 책임은 크기 '하는 것'과 '아는 것'의 범주로 나누어 세분화 된다.
+
+#### 하는 것
+- 객체를 생성하거나 계산 수행하는 등의 스스로 하는 것
+- 다른 객체의 행동을 시작시키는 것
+- 다른 객체의 활동을 제어하고 조절하는 것
+
+#### 아는 것
+- 사적인 정보에 관해 아는 것
+- 관련된 객체에 관해 아는 것
+- 자신이 유도하거나 계산할 수 있는 것에 관해 아는 것
+
+### 역할
+__어떤 특정한 협력 안에서 수행하는 책임의 집합__을 역할이라고 부른다. 역할이 중요한 이유는 역할을 통해 유연하고 재사용 가능한 협력을 얻을 수 있기 때문이다. 
+
+#### 역할의 특징
+- 여러 객체가 동일한 역할을 수행할 수 있다.
+- 역할은 대체 가능성을 의미한다.
+- 각 객체는 책임을 수행하는 방법을 자율적으로 선택할 수 있다.
+- 하나의 객체가 동시에 여러 역할을 수행할 수 있다.
