docs: 익명함수 예시 내용 추가

--- a/4주차과제/자바기초.md
+++ b/4주차과제/자바기초.md
@@ -142,6 +142,40 @@ int b = 50; //b에 50 대입
 #### 7.1.1 익명 함수란?  
 | 함수의 이름이 없는 함수
 
+아래 예시는 익명 함수가 아닌 경우이다. 
+```
+public class Test{ 
+  private int num = 1; 
+  public int getNum(){ 
+     return this.num; } 
+  public void setNum(int num){
+     this.num = num; 
+  } 
+ }
+```
+```
+ Test t1 = new Test();
+```
+익명 함수가 아닌 경우 다음과 같이 인스턴스를 만들고, 여기서의 인스턴스는 클래스 이름인 Test라고 불린다.  
+
+반면, 아래는 익명 함수의 예시이다.  
+
+```
+Test t1 = new Test(){ 
+ public int num = 10; 
+ @Override public int getNum(){
+  return this.num; 
+  } 
+ };
+
+```
+해당 예시는 익명 함수에 대한 예시로 인스턴스 옆에 블럭이 있다.  
+new Test()라는 소스코드가 있어 Test의 이름을 가질 것 같지만 그렇지 않고 이름이 없다.  
+
+
+
+
+
 ### 7.2 람다 식이란?
 | 식별자 없이 실행가능한 함수
 - 함수지만 함수를 따로 만들지 않고 코드 한줄에 함수를 써서 그를 호출하는 방식
