docs: 객체지향 오타수정

--- a/4주차/객체 지향-역할, 책임, 협력.md
+++ b/4주차/객체 지향-역할, 책임, 협력.md
@@ -14,7 +14,7 @@
 ### 2-1. 역할
 역할은 관련성 높은 책임의 집합이다. 객체의 역할은 사람의 역할과 유사하게 다음과 같은 특징을 가진다.
 - 여러 객체가 동일한 역할을 수해할 수 있다.
-- 역할은 개체 가능성을 의미한다.
+- 역할은 대체 가능성을 의미한다.
 - 각 객체는 책임을 수행하는 방법을 자율적으로 선택할 수 있다.
 - 하나의 객체가 동시에 여러 역할을 수행할 수 있다.
 
