--- a/4주차과제/자바코드실습.md
+++ b/4주차과제/자바코드실습.md
@@ -49,19 +49,48 @@
 
 다음과 같이 VO를 사용할 수 있음  
 ```
-public class AccountVo {
-	private String id;
-	private String pw;
+public class BoardVO {
 	
-	
-	public String getId() {
-		return this.id;
+	private int id;
+	private String subject;
+	private String context;
+	private String attachments;
+	private int likes;
+	private int views;
+	private int writer;
+	private Date create_time;
+	public int getId() {
+		return id;
+	}
+	public String getSubject() {
+		return subject;
+	}
+	public String getContext() {
+		return context;
+	}
+	public String getAttachments() {
+		return attachments;
+	}
+	public int getLikes() {
+		return likes;
+	}
+	public int getViews() {
+		return views;
+	}
+	public int getWriter() {
+		return writer;
+	}
+	public Date getCreate_time() {
+		return create_time;
 	}
 	
-	public String getPw() {
-		return this.pw;
+	@Override
+	public String toString() {
+		return "BoardVO [id=" + id + ", subject=" + subject + ", context=" + context + ", attachments=" + attachments
+				+ ", likes=" + likes + ", views=" + views + ", writer=" + writer + ", create_time=" + create_time + "]";
 	}
 	
+}
 }
 ```
 ### VO 장점
