--- a/4주차과제/자바코드실습.md
+++ b/4주차과제/자바코드실습.md
@@ -39,6 +39,14 @@
 - 동일한 역할을 수행할 수 있다는 것은 해당 객체들이 협력 내에서 동일한 책임의 집합을 수행 할 수 있다는 것을 의미  
 - 객체지향 설계의 단순성,유연성,재사용성을 뒷받침  
 
+### 메시지  
+| 객체가 다른 객체에 접근할 수 있는 유일한 방법
+- 객체지향 애플리케이션의 중심 사상은 연쇄적으로 메시지를 전송하고 수신하는 객체들 사이의 협력 관계를 기반으로 사용자에게 유용한 기능을 제공하는 것  
+- 클래스를 먼저 정의하기보다 객체의 속성과 행위를 식별하는 것이 우선  
+- 다른 객체에게 제공해야하는 메시지를 찾자  
+- 객체가 어떤 메시지를 전송할 수 있고, 어떤 메시지를 이해할 수 있는 지 집중  
+- 메시지가 객체를 선택해야 함  
+
 
 
 ## VO(value object)
