feat: 문자열계산기에서의 객체 책임 정리

--- a/5주차과제/자바코드실습/계산기구현정리.md
+++ b/5주차과제/자바코드실습/계산기구현정리.md
@@ -21,3 +21,22 @@
 - 배열에 입력된 수를 연산자에 따라 계산해 계산 결과 출력  
 
 
+## 문자열 계산기에서의 객체 책임 정리
+객체의 책임은 크게 '하는 것'과 '아는 것으로 분류
+
+### 입력에서의 하는 것과 아는 것
+- 하는 것: 입력 받는 것을 요구
+- 아는 것: 입력 값
+
+### 계산기 기능에서의 하는 것과 아는 것
+- 하는 것:
+  - 문자열을 공백 기준으로 분리 해 배열로 저장
+  - 숫자로 판단된 문자를 정수형으로 저장
+  - 연산자에 따라 알맞게 숫자 계산
+  - 계산한 결과 값 출력  
+    
+- 아는 것: 
+    - 배열에 저장된 숫자
+    - 배열에 저장된 연산자
+    - 계산 결과 값
+    
