--- a/5주차/자바 기초.md
+++ b/5주차/자바 기초.md
@@ -30,6 +30,18 @@ if (a == 4) {	// a = 4가 참이면 아래 문장을 실행
 ### 1-2. switch문
 if-else 문에서는 조건문을 직접 설정할 수 있어서 특정 변수의 값의 범위를 지정할 수 있지만 switch문에서는 그렇게 할 수 없다.
 
+- 예제
+```java
+int a = 5;
+if (a <= 5) { // 가능
+    System.out.println("5 이하");
+}
+switch (a) {
+    case a <= 5: // 불가능
+        System.out.println("5 이하");
+}
+```
+
 switch문에서는 변수나 조건문의 결과가 case문에서 지정한 값과 같은지 동등비교만 할 수 있다.
 
 break 키워드는 로직 실행을 종료할 수 있다. 로직은 switch문이 종료되거나 break 키워드를 만날 때까지 실행된다.
@@ -96,6 +108,19 @@ for (변수 변수이름 : 배열or컨테이너) {
 반복 조건을 처음부터 따지는 경우에 사용된다.
 for문과 다르게 while문 조건식에 사용되는 변수는 선언과 초기화가 반드시 되어있어야 한다.
 반복문이 실행되면서 조건식을 false로 만들 수 있도록 설계되어야한다. 그렇지 않으면 무한반복된다.
+
+- 예제
+```java
+int i = 0;  // 변수의 선언 및 초기화
+while (i <= 5) {
+    System.out.println("i = " + i);
+    i++;
+}
+
+while (true) {  // 무한반복
+    System.out.println("Hello");
+}
+```
 
 ```java
 while (조건식) {
