add: 객체의 역할과 책임

--- a/5주차 과제/1. 자바 코드 실습.md
+++ b/5주차 과제/1. 자바 코드 실습.md
@@ -12,6 +12,18 @@
 	- 연산자
 - 하는 것
 	- 연산
+
+### 연산자(Operator)
+- 아는 것
+	- 연산자
+- 하는 것
+	- 연사자의 error 체크 후 반환
+
+### 피연산자(Operand)
+- 아는 것 
+	- 피연산자
+- 하는 것
+	- 피연산자의 error 체크 후 반환
 	
 ## 구현할 기능 목록 정리
 ### 메인 화면
@@ -20,10 +32,5 @@
 	- 보장된 숫자가 아닐 시 에러 출력
 		- ```IllegalArgumentException```
 	
--[x] 보장된 연산자 입력
-	- 보장된 연산자(+, -, *, / 만을 허용)
-	- 보장된 연산자가 아닐 시 에러 출력
-		- ```IllegalArgumentException```
-	
-### 결과 출력
--[x] 형식에 맞게 계산 결과 출력한 후 종료
+-[x] 결과 출력
+	- 형식에 맞게 계산 결과 출력한 후 종료
