feat: 클래스 정의하기

--- a/6주차과제/자바기초.md
+++ b/6주차과제/자바기초.md
@@ -2,3 +2,57 @@
 2021 자바 스터디 6주차 과제
 
 # 자바 기초
+
+## 클래스 정의하는 법
+> 클래스는 객체 지향 프로그래밍의 추상화라는 개념을 직접 구현한 것이라고 할 수 있음
+
+### 클래스의 예시(Car)
+클래스(class)  
+- 차(Car): 설계도  
+
+필드(field)  
+- car.modelName = "카니발"  
+- car.modelYear = 2016  
+- car.color = "주황색"  
+- car.maxSpeed = 350
+
+메소드(method)  
+- car.accelerate()  
+- car.brake()
+
+인스턴스(instance)  
+- 내 차(myCar) : 설계도에 의해 생산된 차량  
+- 친구 차(friendCar) : 설계도에 의해 생산된 또 다른 차량  
+
+
+### 클래스 정의하기
+```
+접근제어자 class 클래스이름 {
+
+    접근제어자 필드1의타입 필드1의이름;
+
+    접근제어자 필드2의타입 필드2의이름;
+
+    ...
+
+    접근제어자 메소드1의 원형
+
+    접근제어자 메소드2의 원형
+
+    ...
+
+};
+```
+
+예시: Car에 대한 클래스 정의
+```
+public class Car{   // 접근제어자, 키워드, 클래스 이름
+    private String modelName;   // 클래스 필드
+    private int modelYear;
+    private String color;
+    private int maxSpeed;
+    
+    public void brake() {}  //클래스 메소드
+    public void accelerate()
+}
+```
