--- a/6주차과제/자바기초.md
+++ b/6주차과제/자바기초.md
@@ -56,3 +56,33 @@ public class Car{   // 접근제어자, 키워드, 클래스 이름
     public void accelerate()
 }
 ```
+
+## 객체 만드는 방법(new 키워드 이해하기)  
+> 객체를 new 연산자로 선언하고 생성함  
+> Class 타입 변수명 = new 생성자 ();
+
+### 인스턴스(객체)  
+자바에서 클래스를 사용하기 위해 해당 클래스 타입의 객체를 선언한다.  
+이렇게 클래스로부터 객체를 선언하는 과정을 **클래스의 인스턴스화**라고 한다.  
+또한 이렇게 선언된 클래스 타입의 객체를 인스턴스라고 한다.  
+즉, 인스턴스란 메모리에 할당된 객체를 의미한다.  
+
+
+### new 연산자  
+new 연산자는 인스턴스(객체)를 생성해주는 역할을 한다.  
+
+1. new 연산자를 통해 **메모리(heap 영역)** 에 데이터 저장 공간을 할당 
+2. 그 공간의 참조값을 객체에게 반환
+3. 생성자 호출  
+
+### Car 클래스 인스턴스화 시키기 예제  
+
+```
+Car myCar = new Car();
+```
+해당 예제의 객체 생성 과정
+1. new 연산자가 myCar 객체에 저장될 메모리 공간 할당
+2. 생성자가 myCar 객체를 초기화
+3. new 연산자가 새로 생성된 객체의 주소(reference)를 myCar 변수에 저장
+4. myCar을 통해 Car에 접근 가능  
+
