feat: 메소드 정의하기

--- a/6주차과제/자바기초.md
+++ b/6주차과제/자바기초.md
@@ -86,3 +86,44 @@ Car myCar = new Car();
 3. new 연산자가 새로 생성된 객체의 주소(reference)를 myCar 변수에 저장
 4. myCar을 통해 Car에 접근 가능  
 
+## 메소드 정의하는 방법  
+> 특정 작업을 수행하기 위한 명령문의 집합이라고 할 수 있음
+
+### 메소드 정의하기
+```
+접근제어자 반환타입 메소드이름(매개변수목록) { // 선언부
+
+    // 구현부
+
+}
+```
+1. 접근 제어자 : 해당 메소드에 접근할 수 있는 범위를 명시
+
+2. 반환 타입(return type) : 메소드가 모든 작업을 마치고 반환하는 데이터의 타입을 명시
+
+3. 메소드 이름 : 메소드를 호출하기 위한 이름을 명시
+
+4. 매개변수 목록(parameters) : 메소드 호출 시에 전달되는 인수의 값을 저장할 변수들을 명시
+
+5. 구현부 : 메소드의 고유 기능을 수행하는 명령문의 집합  
+
+### 메소드 정의하기 예시  
+리턴 값이 없을 경우 void를 사용
+```
+public void method1(int x){
+    System.out.println("method1이 실행됩니다.");
+}
+```
+
+리턴 값이 int형일 경우
+```
+public int method2(){
+    System.out.println("mehod2가 실행됩니다.");
+    
+    return 5;
+}
+```
+
+자바 클래스에 같은 이름의 메소드를 둘 이상 정의할 수 없지만, 메소드 오버로딩(overloading)을 이용하면, 같은 이름의 메소드를 중복해 정의할 수 있다.  
+메소드 오버로딩은 매개변수의 개수나 타입을 다르게 하여 같은 이름의 다른 메소드를 작성하는 것이다.  
+
