feat: 생성자 정의하기

--- a/6주차과제/자바기초.md
+++ b/6주차과제/자바기초.md
@@ -127,3 +127,85 @@ public int method2(){
 자바 클래스에 같은 이름의 메소드를 둘 이상 정의할 수 없지만, 메소드 오버로딩(overloading)을 이용하면, 같은 이름의 메소드를 중복해 정의할 수 있다.  
 메소드 오버로딩은 매개변수의 개수나 타입을 다르게 하여 같은 이름의 다른 메소드를 작성하는 것이다.  
 
+## 생성자 정의하는 방법  
+
+### 생성자(Constructor)란?
+> new 연산자를 통해 인스턴스를 생성할 때 반드시 호출이 되며 객체를 초기화시키는 역할을 한다.  
+
+### 생성자 선언
+```
+public 클래스(매개변수){
+    ...
+}
+```
+
+- 생성자의 이름은 클래스의 이름과 같아야 함  
+- 생성자는 리턴 값이 없음  
+- 생성자는 오버로딩이 가능하다  
+
+### 여러가지 생성자  
+
+Car을 인스턴스화한 예제이다.
+```
+Car myCar = new Car();
+```
+
+### 기본 생성자  
+```
+Car() {} 
+```
+
+- 모든 클래스는 생성자가 존재하며, 하나 이상을 가질 수 있다.  
+- 생성자 선언을 생략했다면 컴파일러가 바이트 코드에 기본 생성자를 자동으로 추가 시킨다.
+- 생성자가 하나라도 있다면, 자동으로 추가하지 않는다.
+
+### 매개변수가 있는 생성자
+- 리턴 타입이 없고, 클래스 이름과 동일 해야 함
+- 매개변수를 선언해 호출 시 값을 넘겨받을 수 있음  
+
+```
+class Car {
+    String color;   // 색상
+    int door;   // 문의 개수
+    
+    Car() {}
+    Car(String c, int d) {
+        color = c;
+        door = d;
+    }
+}
+
+```
+
+### 생성자 오버로딩
+- 매개변수를 달리하여 생성자를 여러 개 선언해 다양화 시킬 수 있다.  
+```
+Car(){
+}
+
+Car(String model){
+    this.model = model;
+}
+
+Car(String model, int maxSpeed){
+    this.model = model;
+    this.maxSpeed = maxSpeed;
+}
+
+```
+
+### 생성자에서 다른 생성자 호출  
+- 한 생성자에만 집중적으로 작성하고, 나머지 생성자는 그 내용을 가지고 있는 생성자를 호출 해 사용한다.  
+- 이 경우에는 this() 코드를 사용
+```
+Car() {
+}
+Car(String model){
+    this(model,null,0);
+}
+Car(String model,String color,int maxSpeed){
+    this.model = model;
+    this.color = color;
+    this.maxSpeed = maxSpeed;
+}
+```
