--- a/6주차과제/자바기초.md
+++ b/6주차과제/자바기초.md
@@ -209,3 +209,69 @@ Car(String model,String color,int maxSpeed){
     this.maxSpeed = maxSpeed;
 }
 ```
+
+## this 키워드 이해하기
+> this는 인스턴스 자기 자신을 가리키는 키워드로 객체, 자기 자신을 나타냄
+
+### 클래스의 속성과 생성자/메소드의 매개변수의 이름이 같은 경우  
+- 클래스 속성을 사용할 때 this 키워드 붙어줌  
+
+```
+public class Fruit{
+    public String name;
+    public String color;
+    public double weight;
+    
+    public Fruit(String name,String color,double weight){
+        this.name = name;   // Fruit 객체의 name 속성 = name매개변수
+        this.color = color;
+        this.weight = weight;
+    }
+}
+```
+
+### 클래스에 오버로딩된 다른 생성자 호출
+- 생성자의 최상단에 사용되어야 함  
+```
+public class Fruit{
+    public String name;
+    public String color;
+    public double weight;
+    public int count;
+    
+    public Fruit(String name, String color){
+        // 밑에 선언된 Fruit 생성자를 호출
+        this(name, color, 0.0, 0)
+    }
+    
+    public Fruit(String name, String color, double weight, int count){
+        this.name = name;
+        this.color = color;
+        this.weight = weight;
+        this.count = count;
+    }
+}
+```
+
+## 객체 자신의 참조값을 전달하고 싶을 때
+```
+public class Fruit{
+    public String name;
+    public String color;
+    public double weight;
+    public int count;
+    
+    public Fruit(String name, String color, double weight, int count) {
+        this.name = name;
+        this.color = color;
+        this.weight = weight;
+        this.count = count;
+    }
+    
+    public Fruit getFruitInstance() {
+        return this;
+    }
+
+}
+```
+
