feat: Enum 클래스 정리

--- a/6주차과제/자바기초.md
+++ b/6주차과제/자바기초.md
@@ -275,3 +275,86 @@ public class Fruit{
 }
 ```
 
+# enum의 개념 및 사용법
+> Enum은 Enumeration의 축약으로 열거라는 의미를 가짐
+> 관련있는 상수(constant)들의 집합이라고 할 수 있음
+
+## enum 선언 하기
+```
+// class 외부에서 선언
+enum Day{
+    Mon, Tues, Wed, Thur, Fri, Sat, Sun
+    
+// class 내부에서 선언
+public enum Day{
+    Mon, Tues, Wed, Thur, Fri, Sat, Sun
+}
+```
+
+## enum 사용 하기
+```
+public class Test{
+    public enum Day{
+        Mon, Tues, Wed, Thur, Fri, Sat, Sun
+    }
+    
+    public static void main(String[] args){
+        Day day = Day.Mon;
+        System.out.println(day);    // Mon
+        System.out.print(Day.Wed);  // Wed
+    }
+}
+```
+
+## 열거 객체 메소드
+**values()** : 열거 타입의 모든 열거객체들을 배열로 만들어 리턴
+```
+enum Day {
+    Mon, Tues, Wed, Thur, Fri, Sat, Sun
+}
+public class Test{
+    public static void main(String[] args){
+    for(Day day : Day.values()){
+        System.out.println(day);
+        }
+    }
+}
+
+// Mon
+// Tues
+// Wed
+// Thur
+// Fri
+// Sat
+// Sun
+```
+
+**ordinal()** : 몇번 째 열거 객체인지 반환
+
+```
+enum Day {
+    Mon, Tues, Wed, Thur, Fri, Sat, Sun
+}
+public class Test{
+    public static void main(String[] args){
+        Day day = Day.Wed;
+        System.out.println(day.ordinal());
+    }
+}
+// 2
+```
+
+**valueOf()** : 매개값으로 주어지는 문자열과 동일한 문자열을 가지는 열거 객체 리턴
+```
+enum Day {
+    Mon, Tues, Wed, Thur, Fri, Sat, Sun
+}
+public class Test{
+    public static void main(String[] args){
+        Day day = Day.valueOf("Wed");
+        System.out.println(day);
+    }
+}
+// Wed
+```
+
