--- a/7주차과제/자바기초.md
+++ b/7주차과제/자바기초.md
@@ -5,6 +5,9 @@
 
 ## 자바 상속의 특징  
 > 상속은 특정 클래스를 상속받아 그 클래스의 변수와 기능을 사용하는 것을 의미한다.
+> <br> 두 클래스를 조상과 자손으로 관계를 맺어준다.
+> <br> 상속을 받을 때에는 "extends" 키워드를 사용한다.
+
 
 타입만 가져오고싶다면 interface 구현
 <br> 타입과 구현(속성,메소드)까지 가져오려면 class 상속 사용  
