feat: super 키워드 정리

--- a/7주차과제/자바기초.md
+++ b/7주차과제/자바기초.md
@@ -36,4 +36,62 @@
 * 생성자는 반드시 클래스 이름과 동일하게 써야하는데, 상속 시 클래스 이름이 달라지기 때문이다.
 * 하지만 재사용을 위해 호출은 할 수 있다. 반드시 첫 줄에서만 가능하다.
 
+## Super 키워드
+> 부모 클래스로부터 상속받은 필드나 메소드를 자식 클래스에서 참조하는 데 사용하는 참조 변수이다.
+
+인스턴스 변수의 이름과 지역 변수의 이름이 같을 경우는 인스턴스 변수 앞에 this 키워드를 사용해 구분 할 수 있었다.  
+이처럼 부모 클래스의 멤버와 자식 클래스의 멤버 이름이 같을 경우는 super 키워드를 사용해 구별 할 수 있다.
+
+```
+class Parent {int a = 5;}
+
+class Child extends Parent {
+    void show() {
+        System.out.println(a);
+        System.out.println(this.a);
+        System.out.println(super.a);
+    }
+}
+
+public class Inheritance{
+    public static void main(String[] args){
+    Child child = new Child();
+    child.show();
+    }
+}
+
+// 5
+// 5
+// 5
+
+```
+위의 예제의 경우에 a는 부모 클래스에서만 선언되어 있고, 따라서 지역 변수, this 참조 변수, super 참조 변수 모두 같은 값이 출력된다.  
+<br>
+<br>
+
+```
+class Parent {int a = 5;}
+
+class Child extends Parent {
+    int a = 10;
+ 
+    void show() {
+        System.out.println(a);
+        System.out.println(this.a);
+        System.out.println(super.a);
+    }
+}
+
+public class Inheritance{
+    public static void main(String[] args){
+    Child child = new Child();
+    child.show();
+    }
+}
+
+// 10
+// 10
+// 5
+```
+위의 예제처럼 자식 클래스에서도 a가 선언되어있는 경우 지역변수와 this참조 변수는 자식 클래스에서의 값을 출력하고, super 참조 변수는 부모 클래스에서의 값을 출력한다.  
 
