feat: 메소드 오버라이딩 정리

--- a/7주차과제/자바기초.md
+++ b/7주차과제/자바기초.md
@@ -42,6 +42,7 @@
 인스턴스 변수의 이름과 지역 변수의 이름이 같을 경우는 인스턴스 변수 앞에 this 키워드를 사용해 구분 할 수 있었다.  
 이처럼 부모 클래스의 멤버와 자식 클래스의 멤버 이름이 같을 경우는 super 키워드를 사용해 구별 할 수 있다.
 
+### Super 예제
 ```
 class Parent {int a = 5;}
 
@@ -95,3 +96,35 @@ public class Inheritance{
 ```
 위의 예제처럼 자식 클래스에서도 a가 선언되어있는 경우 지역변수와 this참조 변수는 자식 클래스에서의 값을 출력하고, super 참조 변수는 부모 클래스에서의 값을 출력한다.  
 
+## 메소드 오버라이딩  
+> 상속 관계에 있는 부모 클래스에서 이미 정의된 메소드를 자식 클래스에서 같은 시그니쳐를 갖는 메소드로 다시 정의하는 것이다.  
+> 즉, 상속 받은 부모 클래스의 메소드를 재정의하여 사용하는 것을 의미한다.
+
+### 오버라이딩의 조건
+1. 메소드의 선언부는 기존 메소드와 완전히 같아야 한다.
+   <br> 그렇지만 메소드의 반환 타입은 부모 클래스의 반환 타입으로 타입 변환할 수 있는 타입이라면 변경 가능하다.  
+2. 부모 클래스의 메소드보다 접근 제어자를 더 좁은 범위로 변경 할 수 없다.  
+3. 부모 클래스의 메소드보다 더 큰 범위의 예외를 선언 할 수 없다.  
+4. 호출하고자 하는 메소드는 부모 클래스에 존재해야 한다.  
+
+### 오버라이딩 예제
+```
+class Human{
+    String name;
+    int age;
+    public void getInformation() {System.out.println("이름:"+name+"\n나이"+age);}    
+}
+class Student extends Human{
+    int grade;
+    public void getInformation() {System.out.println("이름:"+name+"\n나이"+age+"\n학년"+grade);} 
+}
+
+public class Inheritance{
+   public static void main(String[] args){
+          Student student = new Student;
+          student.getInfo();
+   }
+}
+
+// 오버라이딩 된 자식 클래스의 getInformation이 호출 됨
+```
