docs: 자바 기초.md 오타 수정

--- a/7주차/자바 기초.md
+++ b/7주차/자바 기초.md
@@ -125,8 +125,8 @@ public class Main {
 > 
 > Dogs can walk and run
 
-### 더블 디스패치(Double Dispatch)
-더블 디스패치란 다이나믹 디스패치를 두번 하는 것이다.
+> ### 더블 디스패치(Double Dispatch)
+> 더블 디스패치란 다이나믹 디스패치를 두번 하는 것이다.
 
 ## 5. 추상 클래스
 추상 클래스는 ```abstract``` 키워드가 추가된 클래스이다. 이 클래스는 추상 메소드 포함하고 있거나, 포함하지 않을 수 있다.
