--- a/자바 기초.md
+++ b/자바 기초.md
@@ -15,6 +15,59 @@
 	- 자바 컴파일러에 의해 자동으로 이루어진다.
 
 ## super 키워드
+> 자바의 슈퍼 키워드는 부모 클래스 객체를 즉시 참조할 때 사용하는 참조변수이다.
+
+### super키워드 사용
+1. 부모 클래스 인스턴스 변수를 즉시 참조할 때 사용한다.
+2. super()는 부모 클래스 생성자를 즉시 호출할 때 사용한다.
+3. 부모 클래스 메소드를 즉시 호출할 때 사용한다.
+
+### super()
+> 서브 클래스에서 명시적으로 슈퍼클래스의 생성자를 선택하여 호출한다.
+- super(parameter)
+- 인자를 이용하여 슈퍼 클래스의 적당한 생성자를 호출한다.
+- 반드시 서브 클래스 생성자 코드의 제일 첫 라인에 와야한다.
+
+```java
+class Point {
+	private int x, y; // 한 점을 구성하는 x, y 좌표
+	public Point() {
+		this.x = 0;
+		this.y = 0;
+	}
+	public Point(int x, int y) {
+		this.x = x; 
+		this.y = y;
+	}
+	public void showPoint() { // 점의 좌표 출력
+		System.out.println("(" + x + "," + y + ")");
+	}
+}
+
+class ColorPoint extends Point { 
+	private String color; // 점의 색
+	public ColorPoint(int x, int y, String color) {
+		super(x, y); // Point의 생성자 Point(x, y) 호출
+		this.color = color;
+	}
+	public void showColorPoint() { // 컬러 점의 좌표 출력
+		System.out.print(color);
+		showPoint(); // Point 클래스의 showPoint() 호출
+	}
+}
+
+public class SuperEx {
+	public static void main(String[] args) {
+		ColorPoint cp = new ColorPoint(5, 6, "blue");
+		cp.showColorPoint();
+	}
+}
+
+//실행 결과
+blue(5,6)
+```
+
+## 메소드 오버라이딩
 ## 다이나믹 메소드 디스패치 (Dynamic Method Dispatch)
 ## 추상 클래스
 ## final 키워드
