--- a/자바 기초.md
+++ b/자바 기초.md
@@ -132,11 +132,11 @@ Circle
 ```
 
 ### 동적 바인딩 vs 정적 바인딩
-- 동적 바인딩(Dynamic Binding)
+- `동적 바인딩`(Dynamic Binding)
 	- 다형성을 사용하여 메소드를 호출할 때, 발생하는 현상이다.
 	- 실행시간(Runtime). 즉, 파일을 실행하는 시점에 성격이 결정된다.
 	- 실제 참조하는 객체는 서브 클래스이니 서브 클래스의 메소드를 호출한다.
-- 정적 바인딩(Static Binding)
+- `정적 바인딩`(Static Binding)
 	- 컴파일(Compile) 시간에 성격이 결정된다.
 	- 변수의 타입이 슈퍼 클래스이니 슈퍼 클래스의 메소드를 호출한다.
 
