feat: 다이나믹 메소드 디스패치 추가

--- a/7주차과제/자바기초.md
+++ b/7주차과제/자바기초.md
@@ -128,3 +128,109 @@ public class Inheritance{
 
 // 오버라이딩 된 자식 클래스의 getInformation이 호출 됨
 ```
+
+## 다이나믹 메소드 디스패치
+> 런타임에 오버라이딩 된 메소드가 실행 되는 것을 의미한다.
+> 다이나믹은 런타임의 동의어로 사용, 디스패치는 어떤 메소드를 호출할 지 결정하는 것이다.  
+
+```
+public class Parent{
+    public void show() {
+        System.out.println("Parent show");
+    }
+}
+
+public class Child extends Parent{
+    @Override
+    public void show() {
+        System.out.println("Child show");
+    }
+}
+
+public class Main{
+
+    public static main(String[] args){
+        Parent parentA = new Parent();   // Parent 참조, Parent 객체
+        Parent parnetB = new Child();   // Parent 참조, Child 객체
+     
+        parentA.show();
+        parentB.show();
+    }
+}
+
+// Parent show
+// Child show
+
+```
+
+parentB는 Parent 타입 참조 하지만, Parent 클래스에서 정의된 메소드가 실행 된다.  
+컴파일 타임에는 참조 타입맘ㄴ 확인하지만, 런타임 시 JVM에서 객체의 타입을 파악하고 그 객체에 정의된 메소드를 실행한다.
+
+### Double Dispatch
+> 런타임 디스패치를 두 번 시도 하는 것
+> 
+```
+public class Dispatch {
+    interface Post {
+        void postOn(SNS sns);
+    }
+    static class Text implements Post{
+        @Override
+        public void postOn(SNS sns) {
+            sns.post(this);
+        }
+    }
+    static class Picture implements Post{
+        @Override
+        public void postOn(SNS sns) {
+            sns.post(this);
+        }
+    }
+
+    interface SNS{
+        void post(Text post);
+        void post(Picture post);
+    }
+    static class Facebook implements SNS{
+
+        @Override
+        public void post(Text post) {
+            System.out.println("text-facebook");
+        }
+
+        @Override
+        public void post(Picture post) {
+            System.out.println("picture-facebook");
+        }
+    };
+    static class Twitter implements SNS{
+
+        @Override
+        public void post(Text post) {
+            System.out.println("text-twitter");
+        }
+
+        @Override
+        public void post(Picture post) {
+            System.out.println("picture-twitter");
+        }
+    };
+
+    public static void main(String[] args) {
+        List<Post> posts = Arrays.asList(new Text(),new Picture());
+        List<SNS> sns = Arrays.asList(new Facebook(),new Twitter());
+
+        posts.forEach(p->sns.forEach(s->p.postOn(s)));
+    }
+}
+
+=====================결과=====================
+text-facebook
+text-twitter
+picture-facebook
+picture-twitter
+```
+
+1. post 클래스의 구현체 중에서 어떤 클래스의 postOn 메소드를 사용할지  
+2. postOn 인자로 선택된 것 중에서 어떤 post 메소드를 사용할지
+-> 총 두번의 Dynamic Dispatch 사용
