--- a/7주차과제/자바기초.md
+++ b/7주차과제/자바기초.md
@@ -234,3 +234,41 @@ picture-twitter
 1. post 클래스의 구현체 중에서 어떤 클래스의 postOn 메소드를 사용할지  
 2. postOn 인자로 선택된 것 중에서 어떤 post 메소드를 사용할지
 -> 총 두번의 Dynamic Dispatch 사용
+   
+
+## 추상 클래스 (abstract class)
+> 하나 이상의 추상 메소드를 포함하는 클래스이다.
+> <br> 추상 메소드는 선언만 있고 본체는 없는 함수이다.
+> <br>클래스의 공통되는 필드와 메소드를 정의한 클래스이기도 하다.
+
+```
+abstract class 클래스명 {
+    abstract 리턴타입 메소드명([매개변수]);
+}
+```
+
+### 추상 클래스의 특징
+1. 자체적으로 객체를 생성할 수 없고, 상속을 통해 자식 클래스에서 인스턴스를 생성해야 한다.  
+2. 추상 클래스는 추상 메소드, 일반 메소드, 필드(멤버변수), 생성자로 구성된다.  
+3. 일반적인 상속의 특성과 동일하다.  
+4. 추상 클래스를 상속받는 클래스는 추상 메소드를 반드시 오버라이딩 해야 한다.  
+
+### 추상 클래스 예제
+```
+abstract class Animal { abstract void cry(); }
+class Cat extends Animal { void cry() { System.out.println("냐옹"); } }
+class Dog extends Animal { void cry() { System.out.println("멍"); } }
+ 
+public class Test {
+    public static void main(String[] args) {
+        // Animal a = new Animal(); // 추상 클래스는 인스턴스를 생성할 수 없음.
+        Cat c = new Cat();
+        Dog d = new Dog();
+        c.cry();
+        d.cry();
+    }
+}
+
+// 냐옹
+// 멍
+```
