feat: fianl 키워드 내용 추가

--- a/7주차과제/자바기초.md
+++ b/7주차과제/자바기초.md
@@ -272,3 +272,40 @@ public class Test {
 // 냐옹
 // 멍
 ```
+
+## final 키워드
+> 변수나 메소드 또는 클래스가 변경 불가능하도록 하는 키워드
+
+### final 클래스
+fianl 클래스는 클래스를 상속받을 수 없음을 지정한다.
+```
+final class FinalClass {
+    ...
+}
+
+class Test extends FinalClass{  // 컴파일 오류
+    ...
+}
+```
+
+### final 메소드
+final 메소드는 더이상 오버라이딩 할 수 없음을 지정한다.
+```
+public class SuperClass {
+    protected final int finalMethod() {...}
+}
+class Test extends SuperClass {
+    protected int finalMethod(){...}    //컴파일 오류
+}
+```
+
+### final 필드, 상수
+```
+public class Test {
+    final int ROWS = 10;    // 상수 정의, 초기값 설정
+
+    void foo() {
+        ROWS = 20;  //컴파일 오류, 상수값 변경 불가
+    }
+}
+```
