--- a/7주차과제/자바기초.md
+++ b/7주차과제/자바기초.md
@@ -309,3 +309,50 @@ public class Test {
     }
 }
 ```
+
+## Object 클래스
+
+### java.lang 패키지
+> 자바에서 가장 기본적인 동작을 수행하는 클래스들의 집합
+> java.lang.Object 클래스가 가장 많이 사용됨
+
+### toString() 메소드
+해당 인스턴스에 대한 정보를 문자열로 반환
+```
+Car car = new Car();
+
+System.out.println(car.toString());
+
+// Car@15db9742
+```
+
+### equlas() 메소드
+해당 인스턴스를 매개변수로 전달받는 참조 변수와 비교해 그 결과를 반환
+```
+Car car01 = new Car();
+Car car02 = new Car();
+
+System.out.println(car01.equals(car02));
+car01 = car02;  // 두 참조 변수가 같은 주소 가르킴
+System.out.println(car01.equals(car02));
+
+// false
+// true
+```
+
+### 그외의 Object 클래스 메소드
+
+|메소드|설명|
+|---|---|
+|protected Object clone()|해당 객체의 복제본을 생성하여 반환|
+|boolean equals(Object obj)|해당 객체와 전달받은 객체가 같은지 여부를 반환|
+|protected void finalize()|해당 객체를 더는 아무도 참조하지 않아 가비지 컬렉터가 객체의 리소스를 정리하기 위해 호출|
+|Class<T> getClass()|해당 객체의 클래스 타입을 반환|
+|int hashCode()|해당 객체의 해시 코드값을 반환|
+|void notify()|해당 객체의 대기(wait)하고 있는 하나의 스레드를 다시 실행할 때 호출|
+|void notifyAll()|해당 객체의 대기(wait)하고 있는 모든 스레드를 다시 실행할 때 호출|
+|String toString()|해당 객체의 정보를 문자열로 반환|
+|void wait()|해당 객체의 다른 스레드가 notify()나 notifyAll() 메소드를 실행할 때까지 현재 스레드를 일시적으로 대기(wait)시킬 때 호출|
+|void wait(long timeout)|해당 객체의 다른 스레드가 notify()나 notifyAll() 메소드를 실행하거나 전달받은 시간이 지날 때까지 현재 스레드를 일시적으로 대기(wait)시킬 때 호출|
+|void wait(long timeout, int nanos)|해당 객체의 다른 스레드가 notify()나 notifyAll() 메소드를 실행하거나 전달받은 시간이 지나거나 다른 스레드가 현재 스레드를 인터럽트(interrupt) 할 때까지 현재 스레드를 일시적으로 대기(wait)시킬 때 호출
+
