--- a/자바 기초.md
+++ b/자바 기초.md
@@ -154,6 +154,43 @@ Circle
 [동적 바인딩 vs 정적 바인딩](https://woovictory.github.io/2020/07/05/Java-binding/)
 
 ## 다이나믹 메소드 디스패치 (Dynamic Method Dispatch)
+> 다이나믹 메소드 디스패치는 자바의 테크닉 중 하나로, 런타임에 오버라이딩 된 메소드가 실행되는 것을 의미한다. 이는 참조 타입이 부모 타입인 경우에도 동작하므로 런타임 시점에 다형성을 만족하도록 할 수 있다.
+
+```java
+public class Animal {
+  public void move() {
+    System.out.println("Animals can move");
+  }
+}
+
+public class Dog extends Animal {
+  @Override
+  public void move() {
+    System.out.println("Dogs can walk and run");
+  }
+}
+
+public class Main {
+
+  public static void main(String[] args) {
+    Animal a = new Animal(); // Animal 참조, Animal 객체
+    Animal b = new Dog(); // Animal 참조, Dog 객체
+
+    a.move(); // Animal 클래스에 정의된 메서드 실행
+    b.move(); // Dog 클래스에 정의된 메서드가 실행됨(다이나믹 메소드 디스패치)
+  }
+}
+
+//실행 결과
+Animals can move
+Dogs can walk and run
+```
+위 예제에서 b는 `Animal` 타입을 참조하지만 `Dog` 클래스에 정의된 `move`메소드가 실행되는 것을 확인할 수 있다. 이 이유는 컴파일 타입에는 참조 타입만 확인하지만, 런타임에는 JVM이 객체의 타입을 파악하고 그 객체에 정의된 메소드를 실행한다.
+
+### Reference
+- [다이나믹 메소드 디스패치(Dynamic Method Dispatch)](https://velog.io/@dion/%EB%B0%B1%EA%B8%B0%EC%84%A0%EB%8B%98-%EC%98%A8%EB%9D%BC%EC%9D%B8-%EC%8A%A4%ED%84%B0%EB%94%94-6%EC%A3%BC%EC%B0%A8-%EC%83%81%EC%86%8D#%EB%8B%A4%EC%9D%B4%EB%82%98%EB%AF%B9-%EB%A9%94%EC%86%8C%EB%93%9C-%EB%94%94%EC%8A%A4%ED%8C%A8%EC%B9%98dynamic-method-dispatch)
+
 ## 추상 클래스
 ## final 키워드
+### final 변수
 ## Object 클래스
